--- a/portal/src/main/resources/i18n/messages_bg.properties
+++ b/portal/src/main/resources/i18n/messages_bg.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=място за вдъхновение и идеи. Търси в културните сбирки на Европа, свързвай се с други потребителски пътечки и споделяй своите открития.
-AboutUs_t=За нас
-Accessibility_t=Достъпност
-Actions_t=Действия
-AddATag_t=Добави таг
-Add_t=Добави
-AdvancedSearch_t=Разширено търсене
-AggregatorExplain_t=Агрегаторът събира материали сред множество други организации, дава достъп до тях на своя уебсайт и ги насочва към Europeana.
 All_t=Всички
 AltHome_t=Щракни тук, за да се върнеш на началната страница на Europeana
-AltListView_t=Списъчен изглед
 AltLogoEuropeana_t=лого Europeana "С мисъл за културата"
-AltMoreInfo_t=Шракни за повече информация
-AltNextPage_t=щракнете тук за следващата страница резултати
-AltPreviousPage_t=щракнете тук за предишната страница резултати
-AltPrint_t=Отпечатай страницата
-AltTableView_t=Табличен изглед
-AnEmailHasBeenSentTo_t=Изпратен е e-mail на следния адрес
-AndBoolean_t=и
-AnyField_t=което и да е
-BrowseThroughTime_t=Търси във времето
-ByCountry_t=По страна
-ByLanguage_t=По език
-ByProvider_t=По доставчик
-ByUserTag_t=По потребителски таг
-Bydate_t=По дата
-Bytype_t=По тип
 CheckTheFaqs_t=Провери често задаваните въпроси - може те да съдържат това, за което се отнася обратната връзка
 ChooseLanguage_t=Избери език
 Communities_t=Общности
@@ -34,12 +10,7 @@ Contributor_t=Доставчик
 Contributors_t=Доставчици
 Country_t=Страна
 CreateAccount_t=Създай свой потребителски адрес
-Creator_t=Създател
-DateSaved_t=Датата е запазена
-Date_t=Дата
-Delete_t=Изтрий
 Description_t=Описание
-EmailAddress_t=Е-mail адрес
 EmailAlreadyRegistered_t=Този e-mail е регистриран вече
 EmailClickToConfirm_t=Моля щракнете върху връзката, за да потвърдите регистрацията си
 EmailEuropeanaTeam_t=Екипът на Europeana
@@ -167,6 +138,38 @@ ViewWithLabels_t=Виж с етикетите
 ViewWithoutLabels_t=Виж без етикетите
 ViewingRelatedItems_t=Виждате подобни обекти
 YouHaveSearchFor_t=Вие търсехте...
+_action.add.annotation=null
+_action.add.tag=Добави таг
+_action.advanced.search=Разширено търсене
+_action.alt.list.view=Списъчен изглед
+_action.alt.more.info=Шракни за повече информация
+_action.alt.next.page=щракнете тук за следващата страница резултати
+_action.alt.previous.page=щракнете тук за предишната страница резултати
+_action.alt.table.view=Табличен изглед
+_boolean.and=и
+_facet.by.collection=null
+_facet.by.country=По страна
+_facet.by.date=По дата
+_facet.by.language=По език
+_facet.by.provider=По доставчик
+_facet.by.type=По тип
+_facet.by.user.tag=По потребителски таг
+_facet.by.year=null
+_header.actions=Действия
+_mine.date.saved=Датата е запазена
+_mine.delete=Изтрий
+_option.any.field=което и да е
+_prompt.email.address=Е-mail адрес
+_register.email.has.been.sent=Изпратен е e-mail на следния адрес
+_search.field.creator=Създател
+_search.field.date=Дата
+_unused.about.us=За нас
+_unused.accessibility=Достъпност
+_unused.add=Добави
+_unused.aggregator.explain=Агрегаторът събира материали сред множество други организации, дава достъп до тях на своя уебсайт и ги насочва към Europeana.
+_unused.altprint=Отпечатай страницата
+_unused.aplacetoshareideas=място за вдъхновение и идеи. Търси в културните сбирки на Европа, свързвай се с други потребителски пътечки и споделяй своите открития.
+_unused.browse.through.time=Търси във времето
 albania_t=Албания
 armenia_t=Армения
 austria_t=Австрия
