--- a/portal/src/main/resources/i18n/messages_ca.properties
+++ b/portal/src/main/resources/i18n/messages_ca.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=un lloc per a la inspiració i les idees. Cerqueu entre col·leccions culturals d'Europa, connecteu-vos a camins d'altres usuaris i compartiu els vostres descobriments.
-AboutUs_t=Qui som
-Accessibility_t=Accessibilitat
-Actions_t=Accions
-AddATag_t=Afegir una etiqueta
-Add_t=Afegir
-AdvancedSearch_t=Cerca avançada
-AggregatorExplain_t=*Un agregador recull material d'un conjunt de contribuents, el mostra en el seu propi lloc web i a la vegada el canalitza cap a Europeana.
 All_t=Tots
 AltHome_t=Cliqueu aquí per tornar a la pàgina principal d'Europeana
-AltListView_t=Visualització en llista
 AltLogoEuropeana_t=Logo Europeana pensa cultura
-AltMoreInfo_t=Cliqueu per més informació
-AltNextPage_t=Cliqueu aquí per anar a la pàgina següent de resultats
-AltPreviousPage_t=cliqueu aquí per anar a la pàgina anterior de resultats
-AltPrint_t=Imprimir aquesta pàgina
-AltTableView_t=Visualització en taula
-AnEmailHasBeenSentTo_t=S'ha enviat un correu electrònic a l'adreça següent
-AndBoolean_t=i
-AnyField_t=Qualsevol camp
-BrowseThroughTime_t=Navegueu pel temps
-ByCountry_t=Per país
-ByLanguage_t=Per llengua
-ByProvider_t=Per proveïdor
-ByUserTag_t=Per etiqueta d'usuari
-Bydate_t=Per data
-Bytype_t=Per tipus
 CheckTheFaqs_t=Comproveu les PMF - poden donar resposta a les vostres consultes
 ChooseLanguage_t=Escolliu una llengua
 Communities_t=Comunitats
@@ -34,12 +10,7 @@ Contributor_t=Contribuïdor
 Contributors_t=Contribuïdors
 Country_t=País
 CreateAccount_t=Crear un compte
-Creator_t=Creador
-DateSaved_t=Data guardada
-Date_t=Data
-Delete_t=Esborrar
 Description_t=Descripció
-EmailAddress_t=Adreça de correu electrònic
 EmailAlreadyRegistered_t=Aquest correu electrònic ja ha estat registrat
 EmailClickToConfirm_t=Si us plau, cliqueu el següent enllaç per confirmar el vostre registre
 EmailEuropeanaTeam_t=L'Equip Europeana
@@ -167,6 +138,38 @@ ViewWithLabels_t=Visualització amb etiquetes
 ViewWithoutLabels_t=Visualització sense etiquetes
 ViewingRelatedItems_t=Esteu visualitzant ítems relacionats
 YouHaveSearchFor_t=Heu cercat
+_action.add.annotation=null
+_action.add.tag=Afegir una etiqueta
+_action.advanced.search=Cerca avançada
+_action.alt.list.view=Visualització en llista
+_action.alt.more.info=Cliqueu per més informació
+_action.alt.next.page=Cliqueu aquí per anar a la pàgina següent de resultats
+_action.alt.previous.page=cliqueu aquí per anar a la pàgina anterior de resultats
+_action.alt.table.view=Visualització en taula
+_boolean.and=i
+_facet.by.collection=null
+_facet.by.country=Per país
+_facet.by.date=Per data
+_facet.by.language=Per llengua
+_facet.by.provider=Per proveïdor
+_facet.by.type=Per tipus
+_facet.by.user.tag=Per etiqueta d'usuari
+_facet.by.year=null
+_header.actions=Accions
+_mine.date.saved=Data guardada
+_mine.delete=Esborrar
+_option.any.field=Qualsevol camp
+_prompt.email.address=Adreça de correu electrònic
+_register.email.has.been.sent=S'ha enviat un correu electrònic a l'adreça següent
+_search.field.creator=Creador
+_search.field.date=Data
+_unused.about.us=Qui som
+_unused.accessibility=Accessibilitat
+_unused.add=Afegir
+_unused.aggregator.explain=*Un agregador recull material d'un conjunt de contribuents, el mostra en el seu propi lloc web i a la vegada el canalitza cap a Europeana.
+_unused.altprint=Imprimir aquesta pàgina
+_unused.aplacetoshareideas=un lloc per a la inspiració i les idees. Cerqueu entre col·leccions culturals d'Europa, connecteu-vos a camins d'altres usuaris i compartiu els vostres descobriments.
+_unused.browse.through.time=Navegueu pel temps
 albania_t=Albània
 armenia_t=Armènia
 austria_t=Àustria
