--- a/portal/src/main/resources/i18n/messages_cs.properties
+++ b/portal/src/main/resources/i18n/messages_cs.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=Místo pro inspiraci a náměty. Prohledávaj kulturní sbírky Evropy, sleduj další užvatele a sdílejte svoje objevy
-AboutUs_t=O nás
-Accessibility_t=Možnosti přístupu
-Actions_t=Výběr akcí
-AddATag_t=Přidej tag
-Add_t=Přidat
-AdvancedSearch_t=Pokročilé vyhledávání
-AggregatorExplain_t=Agregátor shromažďuje materiál řady dalších přispěvatelů, zobrazuje jej na jejich vlastní webové stránce a také jej vkládá do European
 All_t=Vše
 AltHome_t=Vrať se na domovskou stránku
-AltListView_t=Seznam zobrazených výsledků
 AltLogoEuropeana_t=logo Euroepana think culture
-AltMoreInfo_t=Další informace
-AltNextPage_t=Následující stránka výsledků
-AltPreviousPage_t=Předcházejí stránka výsledků
-AltPrint_t=Vytiskni tuto stránku
-AltTableView_t=Tabulka zobrazených výsledků
-AnEmailHasBeenSentTo_t=E-mail byl zaslán na následující adresu
-AndBoolean_t=A
-AnyField_t=Jakékoli pole
-BrowseThroughTime_t=Procházej časem
-ByCountry_t=Podle země
-ByLanguage_t=Podel jazyka
-ByProvider_t=Podle poskytovatele
-ByUserTag_t=Podle uživatele
-Bydate_t=Podle data
-Bytype_t=Podle typu
 CheckTheFaqs_t=Prohlédněte si Nejčastější dotazy, možná najdete odpověď na vaši otázku
 ChooseLanguage_t=Zvol jazyk
 Communities_t=Komunity
@@ -34,12 +10,7 @@ Contributor_t=Přispěvatel
 Contributors_t=Přispěvatelé
 Country_t=Země
 CreateAccount_t=Vytvoř účet
-Creator_t=Tvůrce
-DateSaved_t=Uložené datum
-Date_t=Datum
-Delete_t=Vymaž
 Description_t=Popis
-EmailAddress_t=E-mail
 EmailAlreadyRegistered_t=Tato e-mailová adresa je již zaregistrována
 EmailClickToConfirm_t=Kliknutím na následující link potvrďte svou registraci
 EmailEuropeanaTeam_t=Tým European
@@ -167,6 +138,38 @@ ViewWithLabels_t=Zobraz s popisky
 ViewWithoutLabels_t=Zobraz bez popisků
 ViewingRelatedItems_t=Příbuzný materiál
 YouHaveSearchFor_t=Hledal/a jsi
+_action.add.annotation=null
+_action.add.tag=Přidej tag
+_action.advanced.search=Pokročilé vyhledávání
+_action.alt.list.view=Seznam zobrazených výsledků
+_action.alt.more.info=Další informace
+_action.alt.next.page=Následující stránka výsledků
+_action.alt.previous.page=Předcházejí stránka výsledků
+_action.alt.table.view=Tabulka zobrazených výsledků
+_boolean.and=A
+_facet.by.collection=null
+_facet.by.country=Podle země
+_facet.by.date=Podle data
+_facet.by.language=Podel jazyka
+_facet.by.provider=Podle poskytovatele
+_facet.by.type=Podle typu
+_facet.by.user.tag=Podle uživatele
+_facet.by.year=null
+_header.actions=Výběr akcí
+_mine.date.saved=Uložené datum
+_mine.delete=Vymaž
+_option.any.field=Jakékoli pole
+_prompt.email.address=E-mail
+_register.email.has.been.sent=E-mail byl zaslán na následující adresu
+_search.field.creator=Tvůrce
+_search.field.date=Datum
+_unused.about.us=O nás
+_unused.accessibility=Možnosti přístupu
+_unused.add=Přidat
+_unused.aggregator.explain=Agregátor shromažďuje materiál řady dalších přispěvatelů, zobrazuje jej na jejich vlastní webové stránce a také jej vkládá do European
+_unused.altprint=Vytiskni tuto stránku
+_unused.aplacetoshareideas=Místo pro inspiraci a náměty. Prohledávaj kulturní sbírky Evropy, sleduj další užvatele a sdílejte svoje objevy
+_unused.browse.through.time=Procházej časem
 albania_t=Albánie
 armenia_t=Arménie
 austria_t=Rakousko
