--- a/portal/src/main/resources/i18n/messages_da.properties
+++ b/portal/src/main/resources/i18n/messages_da.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=et sted at hente inspiration og idéer. Søg i Europas kultursamlinger, se hvad andre har fundet og del dine egne opdagelser
-AboutUs_t=Om os
-Accessibility_t=Tilgængelighed
-Actions_t=Handlinger
-AddATag_t=Tilføj et nøgleord
-Add_t=Tilføj
-AdvancedSearch_t=Avanceret søgning
-AggregatorExplain_t=En aggregator samler materiale fra en række andre leverandører, viser det på egen website og kanaliserer det også videre til Europeana
 All_t=Alle
 AltHome_t=Klik her for at vende tilbage til Europeanas hjemmeside
-AltListView_t=Vis oversigt
 AltLogoEuropeana_t=logo Europeana indtænk kulturarv
-AltMoreInfo_t=Klik for yderligere information
-AltNextPage_t=Næste resultatliste
-AltPreviousPage_t=klik her for forrige resultatliste
-AltPrint_t=Print denne side
-AltTableView_t=Tabeloversigt
-AnEmailHasBeenSentTo_t=Der er afsendt en e-mail til adressen
-AndBoolean_t=og
-AnyField_t=Alle felter
-BrowseThroughTime_t=Vælg et årstal
-ByCountry_t=Efter land
-ByLanguage_t=Efter sprog
-ByProvider_t=Efter leverandør
-ByUserTag_t=Efter andre brugeres nøgleord
-Bydate_t=Efter årstal
-Bytype_t=Efter type
 CheckTheFaqs_t=Se i FAQ'en for svar på dine spørgsmål
 ChooseLanguage_t=Vælg et sprog
 Communities_t=Fællesskaber
@@ -34,12 +10,7 @@ Contributor_t=Bidragyder
 Contributors_t=Bidragydere
 Country_t=Land
 CreateAccount_t=Opret en konto
-Creator_t=Kunstner
-DateSaved_t=Årstal gemt
-Date_t=Årstal
-Delete_t=Slet
 Description_t=Beskrivelse
-EmailAddress_t=E-mail-adresse
 EmailAlreadyRegistered_t=Denne e-mail er allerede registreret
 EmailClickToConfirm_t=Klik på linket for at bekræfte din registrering
 EmailEuropeanaTeam_t=The Europeana Team
@@ -167,6 +138,38 @@ ViewWithLabels_t=Vis med feltnavne
 ViewWithoutLabels_t=Vis uden feltnavne
 ViewingRelatedItems_t=Se lignende referencer
 YouHaveSearchFor_t=Du søgte efter
+_action.add.annotation=null
+_action.add.tag=Tilføj et nøgleord
+_action.advanced.search=Avanceret søgning
+_action.alt.list.view=Vis oversigt
+_action.alt.more.info=Klik for yderligere information
+_action.alt.next.page=Næste resultatliste
+_action.alt.previous.page=klik her for forrige resultatliste
+_action.alt.table.view=Tabeloversigt
+_boolean.and=og
+_facet.by.collection=null
+_facet.by.country=Efter land
+_facet.by.date=Efter årstal
+_facet.by.language=Efter sprog
+_facet.by.provider=Efter leverandør
+_facet.by.type=Efter type
+_facet.by.user.tag=Efter andre brugeres nøgleord
+_facet.by.year=null
+_header.actions=Handlinger
+_mine.date.saved=Årstal gemt
+_mine.delete=Slet
+_option.any.field=Alle felter
+_prompt.email.address=E-mail-adresse
+_register.email.has.been.sent=Der er afsendt en e-mail til adressen
+_search.field.creator=Kunstner
+_search.field.date=Årstal
+_unused.about.us=Om os
+_unused.accessibility=Tilgængelighed
+_unused.add=Tilføj
+_unused.aggregator.explain=En aggregator samler materiale fra en række andre leverandører, viser det på egen website og kanaliserer det også videre til Europeana
+_unused.altprint=Print denne side
+_unused.aplacetoshareideas=et sted at hente inspiration og idéer. Søg i Europas kultursamlinger, se hvad andre har fundet og del dine egne opdagelser
+_unused.browse.through.time=Vælg et årstal
 albania_t=Albanien
 armenia_t=Armenien
 austria_t=Østrig
