--- a/portal/src/main/resources/i18n/messages_de.properties
+++ b/portal/src/main/resources/i18n/messages_de.properties
@@ -1,31 +1,6 @@
-APlaceToShareIdeas_t=ein Ort für Inspiration und Ideen. Durchsuchen Sie die kulturellen Sammlungen Europas, verbinden Sie sich mit den Suchwegen anderer und teilen Sie Ihre Entdeckungen.
-AboutUs_t=Wir über uns
-Accessibility_t=Zugänglichkeit
-Actions_t=Aktionen
-AddATag_t=Tag hinzufügen
-AddAnnotation_t=Annotation hinzufügen
-Add_t=Hinzufügen
-AdvancedSearch_t=Erweiterte Suche
-AggregatorExplain_t=*Ein Aggregator sammelt Material von einer ganzen Reihe von Organisationen und Institutionen, macht dieses sowohl über ein eigenes Portal als auch über die Europeana zugänglich.
 All_t=Alles
 AltHome_t=Klicken Sie hier, um zur Europeana-Homepage zurückzukehren
-AltListView_t=Listenansicht
 AltLogoEuropeana_t=Logo Europeana Kultur Denken
-AltMoreInfo_t=Für weitere Informationen hier klicken
-AltNextPage_t=Für die nächste Seite hier klicken
-AltPreviousPage_t=Für die vorige Seite hier klicken
-AltPrint_t=Diese Seite drucken
-AltTableView_t=Miniaturansicht
-AnEmailHasBeenSentTo_t=Eine E-Mail wurde an folgende Adresse gesendet
-AndBoolean_t=und
-AnyField_t=Alle Felder
-BrowseThroughTime_t=Durch die Zeit browsen
-ByCountry_t=nach Land
-ByLanguage_t=nach Sprache
-ByProvider_t=nach Anbieter
-ByUserTag_t=nach Nutzertag
-Bydate_t=nach Datum
-Bytype_t=nach Typ
 CheckTheFaqs_t=Lesen Sie die FAQs - sie könnten Ihre Fragen beantworten
 ChooseLanguage_t=Wählen Sie eine Sprache
 Communities_t=Communities
@@ -35,12 +10,7 @@ Contributor_t=Beiträger
 Contributors_t=Beiträger
 Country_t=Land
 CreateAccount_t=Ein Konto anlegen
-Creator_t=Urheber
-DateSaved_t=Datum gespeichert
-Date_t=Datum
-Delete_t=Löschen
 Description_t=Beschreibung
-EmailAddress_t=E-Mailadresse
 EmailAlreadyRegistered_t=Diese E-Mail-Adresse ist bereits registriert.
 EmailClickToConfirm_t=Bitte klicken Sie auf den folgenden Link, um Ihre Registrierung zu bestätigen
 EmailEuropeanaTeam_t=Das Europeana-Team
@@ -168,6 +138,38 @@ ViewWithLabels_t=Mit Labels ansehen
 ViewWithoutLabels_t=Ohne Labels ansehen
 ViewingRelatedItems_t=Sie betrachten ähnliche Objekte
 YouHaveSearchFor_t=Sie haben nach...gesucht
+_action.add.annotation=Annotation hinzufügen
+_action.add.tag=Tag hinzufügen
+_action.advanced.search=Erweiterte Suche
+_action.alt.list.view=Listenansicht
+_action.alt.more.info=Für weitere Informationen hier klicken
+_action.alt.next.page=Für die nächste Seite hier klicken
+_action.alt.previous.page=Für die vorige Seite hier klicken
+_action.alt.table.view=Miniaturansicht
+_boolean.and=und
+_facet.by.collection=null
+_facet.by.country=nach Land
+_facet.by.date=nach Datum
+_facet.by.language=nach Sprache
+_facet.by.provider=nach Anbieter
+_facet.by.type=nach Typ
+_facet.by.user.tag=nach Nutzertag
+_facet.by.year=null
+_header.actions=Aktionen
+_mine.date.saved=Datum gespeichert
+_mine.delete=Löschen
+_option.any.field=Alle Felder
+_prompt.email.address=E-Mailadresse
+_register.email.has.been.sent=Eine E-Mail wurde an folgende Adresse gesendet
+_search.field.creator=Urheber
+_search.field.date=Datum
+_unused.about.us=Wir über uns
+_unused.accessibility=Zugänglichkeit
+_unused.add=Hinzufügen
+_unused.aggregator.explain=*Ein Aggregator sammelt Material von einer ganzen Reihe von Organisationen und Institutionen, macht dieses sowohl über ein eigenes Portal als auch über die Europeana zugänglich.
+_unused.altprint=Diese Seite drucken
+_unused.aplacetoshareideas=ein Ort für Inspiration und Ideen. Durchsuchen Sie die kulturellen Sammlungen Europas, verbinden Sie sich mit den Suchwegen anderer und teilen Sie Ihre Entdeckungen.
+_unused.browse.through.time=Durch die Zeit browsen
 albania_t=Albanien
 armenia_t=Armenien
 austria_t=Österreich
