--- a/portal/src/main/resources/i18n/messages_el.properties
+++ b/portal/src/main/resources/i18n/messages_el.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=ένας χώρος για έμπνευση και ιδέες. Ερευνήστε στις πολιτιστικές συλλογές της Ευρώπης, συνδεθείτε με τα μονοπάτια άλλων χρηστών και μοιραστείτε τις ανακαλύψεις σας.
-AboutUs_t=Για μας
-Accessibility_t=Προσβασιμότητα
-Actions_t=Δράσεις
-AddATag_t=Προσθήκη ετικέτας
-Add_t=Προσθήκη
-AdvancedSearch_t=Σύνθετη έρευνα
-AggregatorExplain_t=*Ένας 'συγκεντρωτής' συλλέγει υλικό από σειρά άλλων συνεργαζόμενων φορέων, το εμφανίζει στο δικό του δικτυακό τόπο και το διοχετεύει επίσης στη Europeana.
 All_t=Όλα
 AltHome_t=Πατήστε εδώ για να επιστρέψετε στην κύρια σελίδα της Europeana
-AltListView_t=Κατάλογος εμφανίσεων
 AltLogoEuropeana_t=λογότυπο της Europeana Σκέψου τον πολιτισμό
-AltMoreInfo_t=Πατήστε εδώ για περισσότερες πληροφορίες
-AltNextPage_t=πατήστε εδώ για την επόμενη σελίδα αποτελεσμάτων
-AltPreviousPage_t=πατήστε εδώ για την προηγούμενη σελίδα αποτελεσμάτων
-AltPrint_t=Εκτύπωση αυτής της σελίδας
-AltTableView_t=Εμφάνιση πίνακα
-AnEmailHasBeenSentTo_t=Ένα μήνυμα ηλ-ταχυδρομείου έχει αποσταλεί στην ακόλουθη διεύθυνση
-AndBoolean_t=και
-AnyField_t=Οποιοδήποτε πεδίο
-BrowseThroughTime_t=Χρονολογική φυλλομέτρηση
-ByCountry_t=Κατά χώρα
-ByLanguage_t=Κατά γλώσσα
-ByProvider_t=Κατά πάροχο
-ByUserTag_t=Κατά ετικέτα χρήστη
-Bydate_t=Κατά ημερομηνία
-Bytype_t=Κατά τύπο
 CheckTheFaqs_t=Ελέγξτε τις Συχνές Ερωτήσεις - ίσως καλύπτουν την ανάδρασή σας
 ChooseLanguage_t=Επιλέξτε γλώσσα
 Communities_t=Κοινότητες
@@ -34,12 +10,7 @@ Contributor_t=Συνεργαζόμενος φορέας
 Contributors_t=Συνεργαζόμενοι φορείς
 Country_t=Χώρα
 CreateAccount_t=Δημιουργία λογαριασμού
-Creator_t=Δημιουργός
-DateSaved_t=Η ημερομηνία αποθηκεύτηκε
-Date_t=Ημερομηνία
-Delete_t=Διαγραφή
 Description_t=Περιγραφή
-EmailAddress_t=Διεύθυνση ηλ-ταχυδρομείου
 EmailAlreadyRegistered_t=Αυτή η διεύθυνση ηλ-ταχυδρομείου έχει ήδη καταγραφτεί
 EmailClickToConfirm_t=Παρακαλούμε πατήστε στον ακόλουθο σύνδεσμο για να επιβεβαιώσετε την εγγραφή σας
 EmailEuropeanaTeam_t=Η Ομάδα της Europeana
@@ -167,6 +138,38 @@ ViewWithLabels_t=Εμφάνιση με τίτλους
 ViewWithoutLabels_t=Εμφάνιση χωρίς τίτλους
 ViewingRelatedItems_t=Βλέπετε σχετικά τεκμήρια
 YouHaveSearchFor_t=Έχετε αναζητήσει για
+_action.add.annotation=null
+_action.add.tag=Προσθήκη ετικέτας
+_action.advanced.search=Σύνθετη έρευνα
+_action.alt.list.view=Κατάλογος εμφανίσεων
+_action.alt.more.info=Πατήστε εδώ για περισσότερες πληροφορίες
+_action.alt.next.page=πατήστε εδώ για την επόμενη σελίδα αποτελεσμάτων
+_action.alt.previous.page=πατήστε εδώ για την προηγούμενη σελίδα αποτελεσμάτων
+_action.alt.table.view=Εμφάνιση πίνακα
+_boolean.and=και
+_facet.by.collection=null
+_facet.by.country=Κατά χώρα
+_facet.by.date=Κατά ημερομηνία
+_facet.by.language=Κατά γλώσσα
+_facet.by.provider=Κατά πάροχο
+_facet.by.type=Κατά τύπο
+_facet.by.user.tag=Κατά ετικέτα χρήστη
+_facet.by.year=null
+_header.actions=Δράσεις
+_mine.date.saved=Η ημερομηνία αποθηκεύτηκε
+_mine.delete=Διαγραφή
+_option.any.field=Οποιοδήποτε πεδίο
+_prompt.email.address=Διεύθυνση ηλ-ταχυδρομείου
+_register.email.has.been.sent=Ένα μήνυμα ηλ-ταχυδρομείου έχει αποσταλεί στην ακόλουθη διεύθυνση
+_search.field.creator=Δημιουργός
+_search.field.date=Ημερομηνία
+_unused.about.us=Για μας
+_unused.accessibility=Προσβασιμότητα
+_unused.add=Προσθήκη
+_unused.aggregator.explain=*Ένας 'συγκεντρωτής' συλλέγει υλικό από σειρά άλλων συνεργαζόμενων φορέων, το εμφανίζει στο δικό του δικτυακό τόπο και το διοχετεύει επίσης στη Europeana.
+_unused.altprint=Εκτύπωση αυτής της σελίδας
+_unused.aplacetoshareideas=ένας χώρος για έμπνευση και ιδέες. Ερευνήστε στις πολιτιστικές συλλογές της Ευρώπης, συνδεθείτε με τα μονοπάτια άλλων χρηστών και μοιραστείτε τις ανακαλύψεις σας.
+_unused.browse.through.time=Χρονολογική φυλλομέτρηση
 albania_t=Αλβανία
 armenia_t=Αρμενία
 austria_t=Αυστρία
