--- a/portal/src/main/resources/i18n/messages_es.properties
+++ b/portal/src/main/resources/i18n/messages_es.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=un lugar para la inspiración y las ideas. Realice su búsqueda por las colecciones de Europa, únase al recorrido de otros usuarios y comparta sus descubrimientos.
-AboutUs_t=Quiénes somos
-Accessibility_t=Accesibilidad
-Actions_t=Acciones
-AddATag_t=Añadir etiqueta
-Add_t=Añadir
-AdvancedSearch_t=Búsqueda avanzada
-AggregatorExplain_t=Un proveedor recoge material de otros que pueden contribuir, mostrándolo en su web y también enviándolo a Europeana.
 All_t=Todo
 AltHome_t=Pinche aquí para volver a la página de Europeana
-AltListView_t=Visualización en Lista
 AltLogoEuropeana_t=Logo Europeana Pensar la Cultura
-AltMoreInfo_t=Pinche aquí para más información
-AltNextPage_t=pinche aquí para ir a los resultados de la página siguiente
-AltPreviousPage_t=pinche aquí para volver a los resultados de la página anterior
-AltPrint_t=Imprimir esta página
-AltTableView_t=Visualización en Tabla
-AnEmailHasBeenSentTo_t=Se ha enviado un correo electrónico a la siguiente dirección
-AndBoolean_t=Y
-AnyField_t=Cualquier campo
-BrowseThroughTime_t=Navegue a través del tiempo
-ByCountry_t=Por país
-ByLanguage_t=Por idioma
-ByProvider_t=Por proveedor
-ByUserTag_t=Por etiqueta de usuario
-Bydate_t=Por fecha
-Bytype_t=Por tipo
 CheckTheFaqs_t=Consulte el apartado de Preguntas Frecuentes (FAQs) si tiene alguna duda.
 ChooseLanguage_t=Seleccione un idioma
 Communities_t=Comunidades
@@ -34,12 +10,7 @@ Contributor_t=colaborador
 Contributors_t=colaboradores
 Country_t=País
 CreateAccount_t=Crear una cuenta
-Creator_t=Creador
-DateSaved_t=Fecha guardada
-Date_t=Fecha
-Delete_t=Borrar
 Description_t=Descripción
-EmailAddress_t=Dirección de correo electrónico
 EmailAlreadyRegistered_t=Esta dirección de correo ya está registrada
 EmailClickToConfirm_t=Por favor, pinche en el siguiente enlace para confirmar su registro
 EmailEuropeanaTeam_t=El equipo de Europeana
@@ -167,6 +138,38 @@ ViewWithLabels_t=Vista con etiqueta
 ViewWithoutLabels_t=Vista sin etiquetas
 ViewingRelatedItems_t=Se muestran los elementos relacionados
 YouHaveSearchFor_t=Usted ha buscado por
+_action.add.annotation=null
+_action.add.tag=Añadir etiqueta
+_action.advanced.search=Búsqueda avanzada
+_action.alt.list.view=Visualización en Lista
+_action.alt.more.info=Pinche aquí para más información
+_action.alt.next.page=pinche aquí para ir a los resultados de la página siguiente
+_action.alt.previous.page=pinche aquí para volver a los resultados de la página anterior
+_action.alt.table.view=Visualización en Tabla
+_boolean.and=Y
+_facet.by.collection=null
+_facet.by.country=Por país
+_facet.by.date=Por fecha
+_facet.by.language=Por idioma
+_facet.by.provider=Por proveedor
+_facet.by.type=Por tipo
+_facet.by.user.tag=Por etiqueta de usuario
+_facet.by.year=null
+_header.actions=Acciones
+_mine.date.saved=Fecha guardada
+_mine.delete=Borrar
+_option.any.field=Cualquier campo
+_prompt.email.address=Dirección de correo electrónico
+_register.email.has.been.sent=Se ha enviado un correo electrónico a la siguiente dirección
+_search.field.creator=Creador
+_search.field.date=Fecha
+_unused.about.us=Quiénes somos
+_unused.accessibility=Accesibilidad
+_unused.add=Añadir
+_unused.aggregator.explain=Un proveedor recoge material de otros que pueden contribuir, mostrándolo en su web y también enviándolo a Europeana.
+_unused.altprint=Imprimir esta página
+_unused.aplacetoshareideas=un lugar para la inspiración y las ideas. Realice su búsqueda por las colecciones de Europa, únase al recorrido de otros usuarios y comparta sus descubrimientos.
+_unused.browse.through.time=Navegue a través del tiempo
 albania_t=Albania
 armenia_t=Armenia
 austria_t=Austria
