--- a/portal/src/main/resources/i18n/messages_et.properties
+++ b/portal/src/main/resources/i18n/messages_et.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=koht ideede ja inspiratsiooni saamiseks. Otsige Europeana kogudest, järgige teiste kasutajate käidud radu ja jagage oma avastusi.
-AboutUs_t=Meist
-Accessibility_t=Juurdepääs
-Actions_t=Tegevused
-AddATag_t=Märksõna lisamine
-Add_t=Lisa
-AdvancedSearch_t=Kompleksotsing
-AggregatorExplain_t=*Vahendaja kogub materjali andmete valdajatelt, avaldab selle oma veebilehel ja suunab ühtlasi Europeanasse
 All_t=Kõik
 AltHome_t=Tagasi Europeana avalehele
-AltListView_t=Vaata nimekirjana
 AltLogoEuropeana_t=logo Europeana tunne kultuuri
-AltMoreInfo_t=Rohkem teavet
-AltNextPage_t=Järgmine tulemuste lehekülg
-AltPreviousPage_t=Eelmine tulemuste lehekülg
-AltPrint_t=Lehekülje trükkimine
-AltTableView_t=Vaata tabelina
-AnEmailHasBeenSentTo_t=E-kiri on saadetud järgmisele aadressile
-AndBoolean_t=ja
-AnyField_t=Mistahes väli
-BrowseThroughTime_t=Sirvimine läbi aja
-ByCountry_t=Riikide järgi
-ByLanguage_t=Keelte järgi
-ByProvider_t=Materjali valdaja järgi
-ByUserTag_t=Kasutajate lisatud märksõnade järgi
-Bydate_t=Ajaliselt
-Bytype_t=Tüübi järgi
 CheckTheFaqs_t=Vaadake korduma kippuvaid küsimusi - võib-olla on sobiv vastus seal juba olemas
 ChooseLanguage_t=Vali keel
 Communities_t=Kogukonnad
@@ -34,12 +10,7 @@ Contributor_t=Vahendaja
 Contributors_t=Vahendajad
 Country_t=Riik
 CreateAccount_t=Kasutajakonto loomine
-Creator_t=Autor
-DateSaved_t=Kuupäev salvestatud
-Date_t=Kuupäev
-Delete_t=Kustuta
 Description_t=Kirjeldus
-EmailAddress_t=E-posti aadress
 EmailAlreadyRegistered_t=See e-posti aadress on juba registreeritud
 EmailClickToConfirm_t=Registreerimise kinnitamiseks klõpsa järgmisele lingile
 EmailEuropeanaTeam_t=Europeana meeskond
@@ -167,6 +138,38 @@ ViewWithLabels_t=Vaata koos siltidega
 ViewWithoutLabels_t=Vaata ilma siltideta
 ViewingRelatedItems_t=Seotud objektide vaatamine
 YouHaveSearchFor_t=Otsiti
+_action.add.annotation=null
+_action.add.tag=Märksõna lisamine
+_action.advanced.search=Kompleksotsing
+_action.alt.list.view=Vaata nimekirjana
+_action.alt.more.info=Rohkem teavet
+_action.alt.next.page=Järgmine tulemuste lehekülg
+_action.alt.previous.page=Eelmine tulemuste lehekülg
+_action.alt.table.view=Vaata tabelina
+_boolean.and=ja
+_facet.by.collection=null
+_facet.by.country=Riikide järgi
+_facet.by.date=Ajaliselt
+_facet.by.language=Keelte järgi
+_facet.by.provider=Materjali valdaja järgi
+_facet.by.type=Tüübi järgi
+_facet.by.user.tag=Kasutajate lisatud märksõnade järgi
+_facet.by.year=null
+_header.actions=Tegevused
+_mine.date.saved=Kuupäev salvestatud
+_mine.delete=Kustuta
+_option.any.field=Mistahes väli
+_prompt.email.address=E-posti aadress
+_register.email.has.been.sent=E-kiri on saadetud järgmisele aadressile
+_search.field.creator=Autor
+_search.field.date=Kuupäev
+_unused.about.us=Meist
+_unused.accessibility=Juurdepääs
+_unused.add=Lisa
+_unused.aggregator.explain=*Vahendaja kogub materjali andmete valdajatelt, avaldab selle oma veebilehel ja suunab ühtlasi Europeanasse
+_unused.altprint=Lehekülje trükkimine
+_unused.aplacetoshareideas=koht ideede ja inspiratsiooni saamiseks. Otsige Europeana kogudest, järgige teiste kasutajate käidud radu ja jagage oma avastusi.
+_unused.browse.through.time=Sirvimine läbi aja
 albania_t=Albaania
 armenia_t=Armeenia
 austria_t=Austria
