--- a/portal/src/main/resources/i18n/messages_fi.properties
+++ b/portal/src/main/resources/i18n/messages_fi.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=paikka elämyksille ja ideoille. Hae Euroopan kulttuuriaarteiden kokoelmista, liity käyttäjien yhteisöön ja jaa kokemuksesi muiden kanssa.
-AboutUs_t=Tietoa meistä
-Accessibility_t=Saavutettavuus
-Actions_t=Tapahtumat
-AddATag_t=Lisää tagi
-Add_t=Lisää
-AdvancedSearch_t=Tarkennettu haku
-AggregatorExplain_t=*Aggregaattori kerää aineistoa useilta muilta osallistujatahoilta, laittaa sen näkyviin omalle Internet-sivustolleen ja lisäksi kanavoi sen Europeanaan.
 All_t=Kaikki
 AltHome_t=Europeanan etusivulle - klikkaa tästä
-AltListView_t=Luettelonäkymä
 AltLogoEuropeana_t=logo Europeana ajattele kulttuuria
-AltMoreInfo_t=Lisätietoja saat klikkaamalla tästä
-AltNextPage_t=Seuraavan sivun tulokset saat näkyviin klikkaamalla tästä
-AltPreviousPage_t=Edellisen sivun tulokset saat näkyviin klikkaamalla tästä
-AltPrint_t=Tulosta tämä sivu
-AltTableView_t=Taulukkonäkymä
-AnEmailHasBeenSentTo_t=Sähköposti on lähetetty osoitteeseen
-AndBoolean_t=ja
-AnyField_t=Kaikki kentät
-BrowseThroughTime_t=Selaa aikakausittain
-ByCountry_t=Maan mukaan
-ByLanguage_t=Kielen mukaan
-ByProvider_t=Julkaisijan mukaan
-ByUserTag_t=Käyttäjän tagin (vapaasti määritelty avainsana) mukaan
-Bydate_t=Aikamääreen mukaan
-Bytype_t=Lajin mukaan
 CheckTheFaqs_t=Käy läpi usein kysytyt kysymykset – ne saattavat kattaa palautteesi aihealueen
 ChooseLanguage_t=Valitse kieli
 Communities_t=Toimijat
@@ -34,12 +10,7 @@ Contributor_t=Osallistuja
 Contributors_t=Osallistujat
 Country_t=Maa
 CreateAccount_t=Luo tili
-Creator_t=Tekijä
-DateSaved_t=Ajankohta tallennettu
-Date_t=Aika
-Delete_t=Hylkää
 Description_t=Kuvaus
-EmailAddress_t=Sähköpostiosoite
 EmailAlreadyRegistered_t=Tämä sähköposti on jo rekisteröity
 EmailClickToConfirm_t=Vahvista rekisteröitymisesi klikkaamalla linkkiä
 EmailEuropeanaTeam_t=Europeana-tiimi
@@ -167,6 +138,38 @@ ViewWithLabels_t=Otsikkonäyttö
 ViewWithoutLabels_t=Näyttö ilman otsikkoja
 ViewingRelatedItems_t=Muita tähän liittyviä kohteita
 YouHaveSearchFor_t=Olet tehnyt haun:
+_action.add.annotation=null
+_action.add.tag=Lisää tagi
+_action.advanced.search=Tarkennettu haku
+_action.alt.list.view=Luettelonäkymä
+_action.alt.more.info=Lisätietoja saat klikkaamalla tästä
+_action.alt.next.page=Seuraavan sivun tulokset saat näkyviin klikkaamalla tästä
+_action.alt.previous.page=Edellisen sivun tulokset saat näkyviin klikkaamalla tästä
+_action.alt.table.view=Taulukkonäkymä
+_boolean.and=ja
+_facet.by.collection=null
+_facet.by.country=Maan mukaan
+_facet.by.date=Aikamääreen mukaan
+_facet.by.language=Kielen mukaan
+_facet.by.provider=Julkaisijan mukaan
+_facet.by.type=Lajin mukaan
+_facet.by.user.tag=Käyttäjän tagin (vapaasti määritelty avainsana) mukaan
+_facet.by.year=null
+_header.actions=Tapahtumat
+_mine.date.saved=Ajankohta tallennettu
+_mine.delete=Hylkää
+_option.any.field=Kaikki kentät
+_prompt.email.address=Sähköpostiosoite
+_register.email.has.been.sent=Sähköposti on lähetetty osoitteeseen
+_search.field.creator=Tekijä
+_search.field.date=Aika
+_unused.about.us=Tietoa meistä
+_unused.accessibility=Saavutettavuus
+_unused.add=Lisää
+_unused.aggregator.explain=*Aggregaattori kerää aineistoa useilta muilta osallistujatahoilta, laittaa sen näkyviin omalle Internet-sivustolleen ja lisäksi kanavoi sen Europeanaan.
+_unused.altprint=Tulosta tämä sivu
+_unused.aplacetoshareideas=paikka elämyksille ja ideoille. Hae Euroopan kulttuuriaarteiden kokoelmista, liity käyttäjien yhteisöön ja jaa kokemuksesi muiden kanssa.
+_unused.browse.through.time=Selaa aikakausittain
 albania_t=Albania
 armenia_t=Armenia
 austria_t=Itävalta
