--- a/portal/src/main/resources/i18n/messages_fr.properties
+++ b/portal/src/main/resources/i18n/messages_fr.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=Une source d'inspiration et d'idées. Recherchez dans le patrimoine culturel de l'Europe et partagez vos découvertes.
-AboutUs_t=A propos
-Accessibility_t=Accessibilité
-Actions_t=Actions
-AddATag_t=Ajouter une étiquette
-Add_t=Ajouter
-AdvancedSearch_t=Recherche avancée
-AggregatorExplain_t=*Un agrégateur collecte du contenu provenant d'un éventail d'autres contributeurs, l'agrégateur apparaît sur le site de ces contributeurs de la même manière qu'ils sont redirigés dans Europeana.
 All_t=Tout
 AltHome_t=Cliquer ici pour retourner à la page d'accueil
-AltListView_t=Voir la liste
 AltLogoEuropeana_t=logo Europeana pensez culture
-AltMoreInfo_t=Cliquer ici pour plus d'information
-AltNextPage_t=Cliquer ici pour visualiser les résultats de la page suivante
-AltPreviousPage_t=Cliquer ici pour visualiser les résultats de la page précédente
-AltPrint_t=Imprimer cette page
-AltTableView_t=Voir le tableau
-AnEmailHasBeenSentTo_t=Un mél. a été envoyé à l'adresse suivante
-AndBoolean_t=et
-AnyField_t=N'importe quel champ
-BrowseThroughTime_t=Feuilleter dans le temps
-ByCountry_t=Par pays
-ByLanguage_t=Par langue
-ByProvider_t=Par fournisseur
-ByUserTag_t=Par étiquette d'utilisateur
-Bydate_t=Par date
-Bytype_t=Par type
 CheckTheFaqs_t=Vérifier les FAQ- ils peuvent contenir une réponse
 ChooseLanguage_t=Choisir une langue
 Communities_t=Communautés
@@ -34,12 +10,7 @@ Contributor_t=Contributeur
 Contributors_t=Contributeurs
 Country_t=Pays
 CreateAccount_t=Créer un compte
-Creator_t=Createur
-DateSaved_t=Date sauvegardée
-Date_t=Date
-Delete_t=Détruire
 Description_t=Description
-EmailAddress_t=Adresse mél.
 EmailAlreadyRegistered_t=Cette adresse mél est déjà enregistrée
 EmailClickToConfirm_t=Veuillez cliquer sur le lien pour confirmer votre inscription
 EmailEuropeanaTeam_t=L'équipe Europeana
@@ -167,6 +138,38 @@ ViewWithLabels_t=Voir avec les labels
 ViewWithoutLabels_t=Voir sans les labels
 ViewingRelatedItems_t=Visualiser les objets en relation
 YouHaveSearchFor_t=Vous avez recherché sur
+_action.add.annotation=null
+_action.add.tag=Ajouter une étiquette
+_action.advanced.search=Recherche avancée
+_action.alt.list.view=Voir la liste
+_action.alt.more.info=Cliquer ici pour plus d'information
+_action.alt.next.page=Cliquer ici pour visualiser les résultats de la page suivante
+_action.alt.previous.page=Cliquer ici pour visualiser les résultats de la page précédente
+_action.alt.table.view=Voir le tableau
+_boolean.and=et
+_facet.by.collection=null
+_facet.by.country=Par pays
+_facet.by.date=Par date
+_facet.by.language=Par langue
+_facet.by.provider=Par fournisseur
+_facet.by.type=Par type
+_facet.by.user.tag=Par étiquette d'utilisateur
+_facet.by.year=null
+_header.actions=Actions
+_mine.date.saved=Date sauvegardée
+_mine.delete=Détruire
+_option.any.field=N'importe quel champ
+_prompt.email.address=Adresse mél.
+_register.email.has.been.sent=Un mél. a été envoyé à l'adresse suivante
+_search.field.creator=Createur
+_search.field.date=Date
+_unused.about.us=A propos
+_unused.accessibility=Accessibilité
+_unused.add=Ajouter
+_unused.aggregator.explain=*Un agrégateur collecte du contenu provenant d'un éventail d'autres contributeurs, l'agrégateur apparaît sur le site de ces contributeurs de la même manière qu'ils sont redirigés dans Europeana.
+_unused.altprint=Imprimer cette page
+_unused.aplacetoshareideas=Une source d'inspiration et d'idées. Recherchez dans le patrimoine culturel de l'Europe et partagez vos découvertes.
+_unused.browse.through.time=Feuilleter dans le temps
 albania_t=Albanie
 armenia_t=Arménie
 austria_t=Autriche
