--- a/portal/src/main/resources/i18n/messages_ga.properties
+++ b/portal/src/main/resources/i18n/messages_ga.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=áit spreagtha agus smaointe. Déan cuardach ar bhailiúcháin chultúrtha na hEorpa, nasc le cosáin úsáideora eile agus roinn do chuid fionnahtana
-AboutUs_t=Cé sinne
-Accessibility_t=Inrochtain
-Actions_t=Gníomhartha
-AddATag_t=Cuir clib leis seo
-Add_t=Suimigh
-AdvancedSearch_t=Cuardach casta
-AggregatorExplain_t=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 All_t=Gach
 AltHome_t=Cliceáil anseo chun filleadh ar leathanch baile Europeana
-AltListView_t=Amharc liosta
 AltLogoEuropeana_t=mana Europeana think culture
-AltMoreInfo_t=Cliceáil anseo le haghaidh tuilleadh eolais
-AltNextPage_t=cliceáil anseo le haghaidh an chéad leathanaigh torthaí eile
-AltPreviousPage_t=cliceáil anseo le haghaidh leathanch na dtorthaí roimhe seo
-AltPrint_t=Priontáil an leathanach seo
-AltTableView_t=Amharc tábla
-AnEmailHasBeenSentTo_t=Seoladh r-phost chuig an seoladh seo leanas
-AndBoolean_t=agus
-AnyField_t=Réimse ar bith
-BrowseThroughTime_t=Brabhsáil trí am
-ByCountry_t=De réir tíre
-ByLanguage_t=De réir teanga
-ByProvider_t=De réir soláthróra
-ByUserTag_t=De réir clib úsáideora
-Bydate_t=De réir dáta
-Bytype_t=De réir sóirt
 CheckTheFaqs_t=Check the FAQs - they may cover your feedback
 ChooseLanguage_t=Roghnaigh Teanga
 Communities_t=Comhphobail
@@ -34,12 +10,7 @@ Contributor_t=Rannpháirtí
 Contributors_t=Rannpháirtithe
 Country_t=Tír
 CreateAccount_t=Cruthaigh cuntas
-Creator_t=Cruthaitheoir
-DateSaved_t=Dáta sábháilte
-Date_t=Dáta
-Delete_t=Scrios
 Description_t=Cur síos
-EmailAddress_t=Seoladh r-phoist
 EmailAlreadyRegistered_t=Tá an r-phost seo cláraithe cheana
 EmailClickToConfirm_t=Cliceáil ar an nasc seo leanas le do thoil chun do chláru a chinntiú
 EmailEuropeanaTeam_t=Foireann Europeana
@@ -167,6 +138,38 @@ ViewWithLabels_t=Amharc le lipéid
 ViewWithoutLabels_t=Amharc gan lipéidd
 ViewingRelatedItems_t=Tá tú ag féachaint ar mhíreanna gaolmhara
 YouHaveSearchFor_t=Chuardaigh tú
+_action.add.annotation=null
+_action.add.tag=Cuir clib leis seo
+_action.advanced.search=Cuardach casta
+_action.alt.list.view=Amharc liosta
+_action.alt.more.info=Cliceáil anseo le haghaidh tuilleadh eolais
+_action.alt.next.page=cliceáil anseo le haghaidh an chéad leathanaigh torthaí eile
+_action.alt.previous.page=cliceáil anseo le haghaidh leathanch na dtorthaí roimhe seo
+_action.alt.table.view=Amharc tábla
+_boolean.and=agus
+_facet.by.collection=null
+_facet.by.country=De réir tíre
+_facet.by.date=De réir dáta
+_facet.by.language=De réir teanga
+_facet.by.provider=De réir soláthróra
+_facet.by.type=De réir sóirt
+_facet.by.user.tag=De réir clib úsáideora
+_facet.by.year=null
+_header.actions=Gníomhartha
+_mine.date.saved=Dáta sábháilte
+_mine.delete=Scrios
+_option.any.field=Réimse ar bith
+_prompt.email.address=Seoladh r-phoist
+_register.email.has.been.sent=Seoladh r-phost chuig an seoladh seo leanas
+_search.field.creator=Cruthaitheoir
+_search.field.date=Dáta
+_unused.about.us=Cé sinne
+_unused.accessibility=Inrochtain
+_unused.add=Suimigh
+_unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
+_unused.altprint=Priontáil an leathanach seo
+_unused.aplacetoshareideas=áit spreagtha agus smaointe. Déan cuardach ar bhailiúcháin chultúrtha na hEorpa, nasc le cosáin úsáideora eile agus roinn do chuid fionnahtana
+_unused.browse.through.time=Brabhsáil trí am
 albania_t=An Albáin
 armenia_t=An Airméin
 austria_t=An Ostair
