--- a/portal/src/main/resources/i18n/messages_hu.properties
+++ b/portal/src/main/resources/i18n/messages_hu.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=- teret ad a gondolatoknak és inspirációknak. Keressen Európa kulturális gyűjteményeiben, kapcsolódjon más felhasználók keresési útvonalaihoz, és ossza meg felefdezéseit!
-AboutUs_t=Rólunk
-Accessibility_t=Elérhetőség
-Actions_t=Műveletek
-AddATag_t=Címke hozzáadása
-Add_t=Hozzáad
-AdvancedSearch_t=Összetett keresés
-AggregatorExplain_t=*A szolgáltató összegyűjti a közreműködőktől a különböző anyagokat, amelyeket megjelenítenek a saját honlapjukon, valamint az Europeanán.
 All_t=Mind
 AltHome_t=Vissza az Europeana honalphoz
-AltListView_t=Listás megjelenítés
 AltLogoEuropeana_t=Europeana logó kultúrában gondolkodunk
-AltMoreInfo_t=További információk
-AltNextPage_t=Következő
-AltPreviousPage_t=Előző
-AltPrint_t=Nyomtatás
-AltTableView_t=Táblázatos megjelenítés
-AnEmailHasBeenSentTo_t=E-mailt küldtünk az alábbi címre:
-AndBoolean_t=és
-AnyField_t=Bármely kulcsszó
-BrowseThroughTime_t=Idő szerinti keresés
-ByCountry_t=Ország
-ByLanguage_t=Nyelv
-ByProvider_t=Szolgáltató
-ByUserTag_t=Felhasználói címke
-Bydate_t=Dátum
-Bytype_t=Típus
 CheckTheFaqs_t=Tekintse meg a Gyakran Ismételt Kérdéseket (GYIK), hátha választ kap a kérdésére
 ChooseLanguage_t=Nyelvválasztás
 Communities_t=Közösségek
@@ -34,12 +10,7 @@ Contributor_t=Közreműködő
 Contributors_t=Közreműködők
 Country_t=Ország
 CreateAccount_t=Felhasználói fiók létrehozása
-Creator_t=Létrehozó
-DateSaved_t=Dátum mentése
-Date_t=Dátum
-Delete_t=Törlés
 Description_t=Leírás
-EmailAddress_t=E-mail címek
 EmailAlreadyRegistered_t=Ezzel az e-mail címmel már regisztráltak.
 EmailClickToConfirm_t=A regisztráció megerősítéséhez kérjük, kattintson az alábbi linkre
 EmailEuropeanaTeam_t=Az Europeana csapata
@@ -167,6 +138,38 @@ ViewWithLabels_t=Feliratos nézet
 ViewWithoutLabels_t=Felirat nélküli nézet
 ViewingRelatedItems_t=A kapcsolódó elemek megtekintése
 YouHaveSearchFor_t=Keresés
+_action.add.annotation=null
+_action.add.tag=Címke hozzáadása
+_action.advanced.search=Összetett keresés
+_action.alt.list.view=Listás megjelenítés
+_action.alt.more.info=További információk
+_action.alt.next.page=Következő
+_action.alt.previous.page=Előző
+_action.alt.table.view=Táblázatos megjelenítés
+_boolean.and=és
+_facet.by.collection=null
+_facet.by.country=Ország
+_facet.by.date=Dátum
+_facet.by.language=Nyelv
+_facet.by.provider=Szolgáltató
+_facet.by.type=Típus
+_facet.by.user.tag=Felhasználói címke
+_facet.by.year=null
+_header.actions=Műveletek
+_mine.date.saved=Dátum mentése
+_mine.delete=Törlés
+_option.any.field=Bármely kulcsszó
+_prompt.email.address=E-mail címek
+_register.email.has.been.sent=E-mailt küldtünk az alábbi címre:
+_search.field.creator=Létrehozó
+_search.field.date=Dátum
+_unused.about.us=Rólunk
+_unused.accessibility=Elérhetőség
+_unused.add=Hozzáad
+_unused.aggregator.explain=*A szolgáltató összegyűjti a közreműködőktől a különböző anyagokat, amelyeket megjelenítenek a saját honlapjukon, valamint az Europeanán.
+_unused.altprint=Nyomtatás
+_unused.aplacetoshareideas=- teret ad a gondolatoknak és inspirációknak. Keressen Európa kulturális gyűjteményeiben, kapcsolódjon más felhasználók keresési útvonalaihoz, és ossza meg felefdezéseit!
+_unused.browse.through.time=Idő szerinti keresés
 albania_t=Albánia
 armenia_t=Örményország
 austria_t=Ausztria
