--- a/portal/src/main/resources/i18n/messages_is.properties
+++ b/portal/src/main/resources/i18n/messages_is.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=vefur fyrir hugljómun og hugmyndir. Leitaðu í menningarsöfnum Evrópu, hafðu samband við aðra notendur og deildu með þeim því sem þú finnur.
-AboutUs_t=Um okkur
-Accessibility_t=Aðgangur
-Actions_t=Aðgerðir
-AddATag_t=Bæta við tilvísun
-Add_t=Bæta við
-AdvancedSearch_t=Ítarleit
-AggregatorExplain_t=*Safnari safnar efni frá öðrum  efnisveitendum, birtir það á eigin vef og beinir því einnig inn í  Europeana.
 All_t=Allir
 AltHome_t=Smelltu hér til að komast á upphafssíðu Europeana
-AltListView_t=Skoða lista
 AltLogoEuropeana_t=kjörorð Europeana – menning í fyrirrúmi
-AltMoreInfo_t=Smelltu til að fá meiri upplýsingar
-AltNextPage_t=smelltu hér til að sjá næstu síðu í niðurstöðum
-AltPreviousPage_t=smelltu hér til að sjá fyrri síðu í niðurstöðum
-AltPrint_t=Prenta þessa síðu
-AltTableView_t=Skpða töflu
-AnEmailHasBeenSentTo_t=Tölvupóstur var sendur á þetta netfang
-AndBoolean_t=og
-AnyField_t=Öll svið
-BrowseThroughTime_t=Fletta í tímaröð
-ByCountry_t=Eftir landi
-ByLanguage_t=Eftir tungumáli
-ByProvider_t=Eftir gagnaveitu
-ByUserTag_t=Eftir tilvísun notanda
-Bydate_t=Eftir dagsetningu
-Bytype_t=Eftir tegund
 CheckTheFaqs_t=Athugaðu algengustu spurningar (FAQ) – þær eiga e.t.v. við þínar athugasemdir
 ChooseLanguage_t=Veldu tungumál
 Communities_t=Samfélög/hópar
@@ -34,12 +10,7 @@ Contributor_t=Efni lagt til af
 Contributors_t=Eftirtaldir leggja til efni
 Country_t=Land
 CreateAccount_t=Stofna aðgang
-Creator_t=Höfundur
-DateSaved_t=Vistuð dagsetning
-Date_t=Dagsetning
-Delete_t=Eyða
 Description_t=Lýsing
-EmailAddress_t=Netfang
 EmailAlreadyRegistered_t=Þetta netfang er þegar skráð
 EmailClickToConfirm_t=Smelltu á eftirfarandi slóð til að staðfesta insskráningu
 EmailEuropeanaTeam_t=Starfslið Europeana
@@ -167,6 +138,38 @@ ViewWithLabels_t=Skoða merki
 ViewWithoutLabels_t=Fela merki
 ViewingRelatedItems_t=Þú ert að horfa á skyld eintök
 YouHaveSearchFor_t=Þú leitaðir að
+_action.add.annotation=null
+_action.add.tag=Bæta við tilvísun
+_action.advanced.search=Ítarleit
+_action.alt.list.view=Skoða lista
+_action.alt.more.info=Smelltu til að fá meiri upplýsingar
+_action.alt.next.page=smelltu hér til að sjá næstu síðu í niðurstöðum
+_action.alt.previous.page=smelltu hér til að sjá fyrri síðu í niðurstöðum
+_action.alt.table.view=Skpða töflu
+_boolean.and=og
+_facet.by.collection=null
+_facet.by.country=Eftir landi
+_facet.by.date=Eftir dagsetningu
+_facet.by.language=Eftir tungumáli
+_facet.by.provider=Eftir gagnaveitu
+_facet.by.type=Eftir tegund
+_facet.by.user.tag=Eftir tilvísun notanda
+_facet.by.year=null
+_header.actions=Aðgerðir
+_mine.date.saved=Vistuð dagsetning
+_mine.delete=Eyða
+_option.any.field=Öll svið
+_prompt.email.address=Netfang
+_register.email.has.been.sent=Tölvupóstur var sendur á þetta netfang
+_search.field.creator=Höfundur
+_search.field.date=Dagsetning
+_unused.about.us=Um okkur
+_unused.accessibility=Aðgangur
+_unused.add=Bæta við
+_unused.aggregator.explain=*Safnari safnar efni frá öðrum  efnisveitendum, birtir það á eigin vef og beinir því einnig inn í  Europeana.
+_unused.altprint=Prenta þessa síðu
+_unused.aplacetoshareideas=vefur fyrir hugljómun og hugmyndir. Leitaðu í menningarsöfnum Evrópu, hafðu samband við aðra notendur og deildu með þeim því sem þú finnur.
+_unused.browse.through.time=Fletta í tímaröð
 albania_t=Albaníu
 armenia_t=Armeníu
 austria_t=Austurríki
