--- a/portal/src/main/resources/i18n/messages_it.properties
+++ b/portal/src/main/resources/i18n/messages_it.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=un luogo per le idee e l'ispirazione. Ricerca le collezioni culturali europee, collegati ai percorsi degli altri utenti e condividi le tue scoperte
-AboutUs_t=Chi siamo
-Accessibility_t=Accessibilità
-Actions_t=Azioni
-AddATag_t=Aggiungi un tag
-Add_t=Aggiungi
-AdvancedSearch_t=Ricerca avanzata
-AggregatorExplain_t=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 All_t=Tutto
 AltHome_t=Torna all'homepage di Europeana
-AltListView_t=Vedi la lista
 AltLogoEuropeana_t=Logo Europeana pensare cultura
-AltMoreInfo_t=Cliccare qui per ulteriori informazioni
-AltNextPage_t=Cliccare qui per visualizzare la successiva pagina dei risultati
-AltPreviousPage_t=Cliccare qui per visualizzare la precedente pagina dei risultati
-AltPrint_t=Stampa questa pagina
-AltTableView_t=Vedi la tabella
-AnEmailHasBeenSentTo_t=E' stata inviata una e-mail al seguente indirizzo
-AndBoolean_t=e
-AnyField_t=Tutti i campi
-BrowseThroughTime_t=Naviga attraverso il tempo
-ByCountry_t=Per paese
-ByLanguage_t=Per lingua
-ByProvider_t=Per fonte
-ByUserTag_t=Per tag utente
-Bydate_t=Per data
-Bytype_t=Per tipo
 CheckTheFaqs_t=Controlla le FAQ – potrebbero contenere le risposte alle tue domande
 ChooseLanguage_t=Scegli una lingua
 Communities_t=Comunità
@@ -34,12 +10,7 @@ Contributor_t=Autore di contributo
 Contributors_t=Autori di contributi
 Country_t=Paese
 CreateAccount_t=Creare un account
-Creator_t=Creatore
-DateSaved_t=Dati salvati
-Date_t=Data
-Delete_t=Cancella
 Description_t=Descrizione
-EmailAddress_t=Indirizzo e-mail
 EmailAlreadyRegistered_t=Questa e-mail è stata già registrata
 EmailClickToConfirm_t=Cliccare sul link seguente per confermare la registrazione
 EmailEuropeanaTeam_t=Il team Europeana
@@ -167,6 +138,38 @@ ViewWithLabels_t=Visualizza con le etichette
 ViewWithoutLabels_t=Visualizza senza etichette
 ViewingRelatedItems_t=Stai visualizzando gli oggetti correlati
 YouHaveSearchFor_t=Hai cercato
+_action.add.annotation=null
+_action.add.tag=Aggiungi un tag
+_action.advanced.search=Ricerca avanzata
+_action.alt.list.view=Vedi la lista
+_action.alt.more.info=Cliccare qui per ulteriori informazioni
+_action.alt.next.page=Cliccare qui per visualizzare la successiva pagina dei risultati
+_action.alt.previous.page=Cliccare qui per visualizzare la precedente pagina dei risultati
+_action.alt.table.view=Vedi la tabella
+_boolean.and=e
+_facet.by.collection=null
+_facet.by.country=Per paese
+_facet.by.date=Per data
+_facet.by.language=Per lingua
+_facet.by.provider=Per fonte
+_facet.by.type=Per tipo
+_facet.by.user.tag=Per tag utente
+_facet.by.year=null
+_header.actions=Azioni
+_mine.date.saved=Dati salvati
+_mine.delete=Cancella
+_option.any.field=Tutti i campi
+_prompt.email.address=Indirizzo e-mail
+_register.email.has.been.sent=E' stata inviata una e-mail al seguente indirizzo
+_search.field.creator=Creatore
+_search.field.date=Data
+_unused.about.us=Chi siamo
+_unused.accessibility=Accessibilità
+_unused.add=Aggiungi
+_unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
+_unused.altprint=Stampa questa pagina
+_unused.aplacetoshareideas=un luogo per le idee e l'ispirazione. Ricerca le collezioni culturali europee, collegati ai percorsi degli altri utenti e condividi le tue scoperte
+_unused.browse.through.time=Naviga attraverso il tempo
 albania_t=Albania
 armenia_t=Armenia
 austria_t=Austria
