--- a/portal/src/main/resources/i18n/messages_lt.properties
+++ b/portal/src/main/resources/i18n/messages_lt.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=vieta mintims ir idėjoms. Ieškokite Europos kultūros ištekliuose, susisiekite su kitu vartotoju ir ir pasidalinkite patirtimi.
-AboutUs_t=Apie mus
-Accessibility_t=Prieiga
-Actions_t=Veiksmai
-AddATag_t=Pridėti žymenį
-Add_t=Įtraukite
-AdvancedSearch_t=Patikslintoji paieška
-AggregatorExplain_t=Agregatas surenka medžiagą iš daugelio bendradarbiaujančių organizacijų, pateikia ją savo tinklalapyje, o taip pat nukreipia ją į Europeana.
 All_t=Visi
 AltHome_t=Spausti čia, norint grįžti į Europeana namų puslapį
-AltListView_t=Sąrašo peržiūra
 AltLogoEuropeana_t=Europeana: kultūra, galvokim apie ją, logo
-AltMoreInfo_t=Spausti čia, norint daugiau informacijos
-AltNextPage_t=Spausti čia, norint matyti rezultatų kitą puslapį
-AltPreviousPage_t=Spausti čia, norint matyti rezultatų ankstesnį puslapį
-AltPrint_t=Spausdinti šį puslapį
-AltTableView_t=Lentelės peržiūra
-AnEmailHasBeenSentTo_t=Elektroninis laiškas išsiųstas šiuo adresu
-AndBoolean_t=ir
-AnyField_t=Bet kuris laukas
-BrowseThroughTime_t=Peržiūra per tam tikrą laiką
-ByCountry_t=Pagal valstybę
-ByLanguage_t=Pagal kalbą
-ByProvider_t=Pagal tiekėją
-ByUserTag_t=Pagal vartotojo žymenį
-Bydate_t=Pagal datą
-Bytype_t=Pagal tipą
 CheckTheFaqs_t=Pasitikrinkite DUK skyriuje - jame jau galite rasti jums reikalingą atsakymą
 ChooseLanguage_t=Pasirinkite kalbą
 Communities_t=Bendruomenės
@@ -34,12 +10,7 @@ Contributor_t=Bendradarbiaujanti organizacija
 Contributors_t=Bendradarbiaujančios organizacijos
 Country_t=Valstybė
 CreateAccount_t=Sukurti paskyrą
-Creator_t=Kūrėjas
-DateSaved_t=Išsaugota data
-Date_t=Data
-Delete_t=Trinti
 Description_t=Aprašymas
-EmailAddress_t=Elektroninio pašto adresas
 EmailAlreadyRegistered_t=Šis elektroninio pašto adresas jau užregistruotas
 EmailClickToConfirm_t=Prašome spausti šią nuorodą ir patvirtinti savo registraciją
 EmailEuropeanaTeam_t=Europeana komanda
@@ -167,6 +138,38 @@ ViewWithLabels_t=Žiūrėti etiketes
 ViewWithoutLabels_t=Žiūrėti be etikečių
 ViewingRelatedItems_t=Žiūrite susijusius vienetus
 YouHaveSearchFor_t=Atlikote paiešką
+_action.add.annotation=null
+_action.add.tag=Pridėti žymenį
+_action.advanced.search=Patikslintoji paieška
+_action.alt.list.view=Sąrašo peržiūra
+_action.alt.more.info=Spausti čia, norint daugiau informacijos
+_action.alt.next.page=Spausti čia, norint matyti rezultatų kitą puslapį
+_action.alt.previous.page=Spausti čia, norint matyti rezultatų ankstesnį puslapį
+_action.alt.table.view=Lentelės peržiūra
+_boolean.and=ir
+_facet.by.collection=null
+_facet.by.country=Pagal valstybę
+_facet.by.date=Pagal datą
+_facet.by.language=Pagal kalbą
+_facet.by.provider=Pagal tiekėją
+_facet.by.type=Pagal tipą
+_facet.by.user.tag=Pagal vartotojo žymenį
+_facet.by.year=null
+_header.actions=Veiksmai
+_mine.date.saved=Išsaugota data
+_mine.delete=Trinti
+_option.any.field=Bet kuris laukas
+_prompt.email.address=Elektroninio pašto adresas
+_register.email.has.been.sent=Elektroninis laiškas išsiųstas šiuo adresu
+_search.field.creator=Kūrėjas
+_search.field.date=Data
+_unused.about.us=Apie mus
+_unused.accessibility=Prieiga
+_unused.add=Įtraukite
+_unused.aggregator.explain=Agregatas surenka medžiagą iš daugelio bendradarbiaujančių organizacijų, pateikia ją savo tinklalapyje, o taip pat nukreipia ją į Europeana.
+_unused.altprint=Spausdinti šį puslapį
+_unused.aplacetoshareideas=vieta mintims ir idėjoms. Ieškokite Europos kultūros ištekliuose, susisiekite su kitu vartotoju ir ir pasidalinkite patirtimi.
+_unused.browse.through.time=Peržiūra per tam tikrą laiką
 albania_t=Albanija
 armenia_t=Armėnija
 austria_t=Austrija
