--- a/portal/src/main/resources/i18n/messages_lv.properties
+++ b/portal/src/main/resources/i18n/messages_lv.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=vieta iedvesmai un idejām. Meklē Eiropas kultūras kolekcijās, ieskaties citu lietotāju meklējumos un dalies savos atklājumos.
-AboutUs_t=Par mums
-Accessibility_t=Piekļuve
-Actions_t=Darbības
-AddATag_t=Pievienot tagu
-Add_t=Pievienot
-AdvancedSearch_t=Izvērstā meklēšana
-AggregatorExplain_t=*Agregators savāc materiālus no virknes citu satura turētāju, parādot to gan viņu pašu tīmekļa vietnēs, gan piegādājot  Europeana.
 All_t=Visi
 AltHome_t=Klikšķināt, lai atgrieztos Europeana sākumlapā
-AltListView_t=Saraksta skats
 AltLogoEuropeana_t=Europeana logo domā kultūrā
-AltMoreInfo_t=Saņemt papildus informāciju
-AltNextPage_t=uz nākošajiem rezultātiem
-AltPreviousPage_t=uz iepriekšējiem rezultātiem
-AltPrint_t=Izdrukāt lappusi
-AltTableView_t=Tabulas skats
-AnEmailHasBeenSentTo_t=E-pasts tika nosūtīts uz sekojošu adresi
-AndBoolean_t=un
-AnyField_t=Jebkurš lauks
-BrowseThroughTime_t=Pārlūkot laikā
-ByCountry_t=Pēc valsts
-ByLanguage_t=Pēc valodas
-ByProvider_t=Pēc piegādātāja
-ByUserTag_t=Pēc lietotāju tagiem
-Bydate_t=Pēc datuma
-Bytype_t=Pēc tipa
 CheckTheFaqs_t=Ieskaties FAQ - tajos var būt atbilde uz Tavu jautājumu.
 ChooseLanguage_t=Izvēlēties valodu
 Communities_t=Kopienas
@@ -34,12 +10,7 @@ Contributor_t=Līdzradītājs
 Contributors_t=Līdzradītāji
 Country_t=Valsts
 CreateAccount_t=Izveidot kontu
-Creator_t=Autors
-DateSaved_t=Saglabāšanas datums
-Date_t=Datums
-Delete_t=Izdzēst
 Description_t=Apraksts
-EmailAddress_t=E-pasta adrese
 EmailAlreadyRegistered_t=Šis e-pasta adrese jau ir piereģistrēta
 EmailClickToConfirm_t=Lūdzu klikšķināt uz saiti, lai apstiprinātu savu reģistrāciju
 EmailEuropeanaTeam_t=Europeana komanda
@@ -167,6 +138,38 @@ ViewWithLabels_t=Skatīt ar iezīmēm
 ViewWithoutLabels_t=Skatīt bez iezīmēm
 ViewingRelatedItems_t=Jūs aplūkojat saistītus objektus
 YouHaveSearchFor_t=Jūs meklējāt pēc
+_action.add.annotation=null
+_action.add.tag=Pievienot tagu
+_action.advanced.search=Izvērstā meklēšana
+_action.alt.list.view=Saraksta skats
+_action.alt.more.info=Saņemt papildus informāciju
+_action.alt.next.page=uz nākošajiem rezultātiem
+_action.alt.previous.page=uz iepriekšējiem rezultātiem
+_action.alt.table.view=Tabulas skats
+_boolean.and=un
+_facet.by.collection=null
+_facet.by.country=Pēc valsts
+_facet.by.date=Pēc datuma
+_facet.by.language=Pēc valodas
+_facet.by.provider=Pēc piegādātāja
+_facet.by.type=Pēc tipa
+_facet.by.user.tag=Pēc lietotāju tagiem
+_facet.by.year=null
+_header.actions=Darbības
+_mine.date.saved=Saglabāšanas datums
+_mine.delete=Izdzēst
+_option.any.field=Jebkurš lauks
+_prompt.email.address=E-pasta adrese
+_register.email.has.been.sent=E-pasts tika nosūtīts uz sekojošu adresi
+_search.field.creator=Autors
+_search.field.date=Datums
+_unused.about.us=Par mums
+_unused.accessibility=Piekļuve
+_unused.add=Pievienot
+_unused.aggregator.explain=*Agregators savāc materiālus no virknes citu satura turētāju, parādot to gan viņu pašu tīmekļa vietnēs, gan piegādājot  Europeana.
+_unused.altprint=Izdrukāt lappusi
+_unused.aplacetoshareideas=vieta iedvesmai un idejām. Meklē Eiropas kultūras kolekcijās, ieskaties citu lietotāju meklējumos un dalies savos atklājumos.
+_unused.browse.through.time=Pārlūkot laikā
 albania_t=Albānija
 armenia_t=Armēnija
 austria_t=Austrija
