--- a/portal/src/main/resources/i18n/messages_mt.properties
+++ b/portal/src/main/resources/i18n/messages_mt.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=post ta' ispirazzjoni u ideat. Fittex fil-ġabriet kulturali tal-Ewropa, aqbad ma' mogħdijiet ta' użaturi oħra u aqsam is-sejbiet tiegħek.
-AboutUs_t=Dwarna
-Accessibility_t=L-aċċessibilità
-Actions_t=Azzjonijiet
-AddATag_t=Żid tikketta
-Add_t=Żid
-AdvancedSearch_t=Tiftix avvanzat
-AggregatorExplain_t=*Aggregatur jiġbor il-materjal mingħand għażla ta' kontributuri oħra, jurih fuq il-websajt tiegħu stess u jinkalah ukoll fl-Europeana.
 All_t=Kollha
 AltHome_t=Ikklikkja hawn biex terġa' lura lejn il-paġna ewlenija tal-Europeana
-AltListView_t=Dehra għamla ta' lista
 AltLogoEuropeana_t=logo Europeana aħseb f'termini ta' kultura
-AltMoreInfo_t=Ikklikkja hawn għal aktar informazzjoni
-AltNextPage_t=Ikklikkja hawn għall-paġna segwenti tar-riżultati
-AltPreviousPage_t=ikklikkja hawn għall-paġna preċedenti tar-riżultati
-AltPrint_t=Stampa din il-paġna
-AltTableView_t=Dehra għamla ta' tabella
-AnEmailHasBeenSentTo_t=Intbgħatet ittre fl-indirizz li ġej
-AndBoolean_t=u
-AnyField_t=Kwalunkwe qasam
-BrowseThroughTime_t=Qalleb kronoloġikament
-ByCountry_t=Bil-pajjiż
-ByLanguage_t=Bil-lingwa
-ByProvider_t=Bil-provditur
-ByUserTag_t=Bit-tikketta tal-użatur
-Bydate_t=Bid-data
-Bytype_t=Bit-tip
 CheckTheFaqs_t=Ara l-Mistoqsijiet Komuni - jafu jkopru l-fehma tiegħek
 ChooseLanguage_t=Agħżel lingwa
 Communities_t=Komunitajiet
@@ -34,12 +10,7 @@ Contributor_t=Kontributur
 Contributors_t=Kontributuri
 Country_t=Pajjiż
 CreateAccount_t=Oħloq kont
-Creator_t=Ħallieq
-DateSaved_t=Data tal-issejvjar
-Date_t=Data
-Delete_t=Ħassar
 Description_t=Deskrizzjoni
-EmailAddress_t=Indirizz elettroniku
 EmailAlreadyRegistered_t=Dan l-indirizz ġa rreġistrat
 EmailClickToConfirm_t=Ikklikkja l-link li ġejja biex tikkonferma r-reġistrazzjoni tiegħek
 EmailEuropeanaTeam_t=It-Tim tal-Europeana
@@ -167,6 +138,38 @@ ViewWithLabels_t=Ara bit-tikketti
 ViewWithoutLabels_t=Ara bla tikketti
 ViewingRelatedItems_t=Qed tara oġġetti relatati
 YouHaveSearchFor_t=Fittixt
+_action.add.annotation=null
+_action.add.tag=Żid tikketta
+_action.advanced.search=Tiftix avvanzat
+_action.alt.list.view=Dehra għamla ta' lista
+_action.alt.more.info=Ikklikkja hawn għal aktar informazzjoni
+_action.alt.next.page=Ikklikkja hawn għall-paġna segwenti tar-riżultati
+_action.alt.previous.page=ikklikkja hawn għall-paġna preċedenti tar-riżultati
+_action.alt.table.view=Dehra għamla ta' tabella
+_boolean.and=u
+_facet.by.collection=null
+_facet.by.country=Bil-pajjiż
+_facet.by.date=Bid-data
+_facet.by.language=Bil-lingwa
+_facet.by.provider=Bil-provditur
+_facet.by.type=Bit-tip
+_facet.by.user.tag=Bit-tikketta tal-użatur
+_facet.by.year=null
+_header.actions=Azzjonijiet
+_mine.date.saved=Data tal-issejvjar
+_mine.delete=Ħassar
+_option.any.field=Kwalunkwe qasam
+_prompt.email.address=Indirizz elettroniku
+_register.email.has.been.sent=Intbgħatet ittre fl-indirizz li ġej
+_search.field.creator=Ħallieq
+_search.field.date=Data
+_unused.about.us=Dwarna
+_unused.accessibility=L-aċċessibilità
+_unused.add=Żid
+_unused.aggregator.explain=*Aggregatur jiġbor il-materjal mingħand għażla ta' kontributuri oħra, jurih fuq il-websajt tiegħu stess u jinkalah ukoll fl-Europeana.
+_unused.altprint=Stampa din il-paġna
+_unused.aplacetoshareideas=post ta' ispirazzjoni u ideat. Fittex fil-ġabriet kulturali tal-Ewropa, aqbad ma' mogħdijiet ta' użaturi oħra u aqsam is-sejbiet tiegħek.
+_unused.browse.through.time=Qalleb kronoloġikament
 albania_t=L-Albanija
 armenia_t=L-Armenja
 austria_t=L-Awstrija
