--- a/portal/src/main/resources/i18n/messages_nb.properties
+++ b/portal/src/main/resources/i18n/messages_nb.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=et sted for inspirasjon og ideer. Søk i de kulturelle samlingene i Europa, finn nye brukerveier og del dine funn
-AboutUs_t=Om oss
-Accessibility_t=Tilgjengelighet
-Actions_t=via hendelser
-AddATag_t=Legg til en tag
-Add_t=Legg til
-AdvancedSearch_t=Avansert søk
-AggregatorExplain_t=En portal samler materiale fra en rekke andre bidragsytere, viser det på egne nettsteder og kanaliserer det inn i Norvegiana.
 All_t=Alle
 AltHome_t=Klikk her for å gå tilbake til Europeanas hjemmeside
-AltListView_t=Listevisning
 AltLogoEuropeana_t=logo Norvegiana tenk kultur
-AltMoreInfo_t=Klikk her for mere info
-AltNextPage_t=Klikk her for neste resultatside
-AltPreviousPage_t=Klikk her for forrige resultatside
-AltPrint_t=Skriv ut denne siden
-AltTableView_t=Tabellvisning
-AnEmailHasBeenSentTo_t=En email er blitt sendt til denne adressen
-AndBoolean_t=og
-AnyField_t=Alle felt
-BrowseThroughTime_t=Browse via tidslinje
-ByCountry_t=via land
-ByLanguage_t=via språk
-ByProvider_t=via tilbyder
-ByUserTag_t=via brukertags
-Bydate_t=via dato
-Bytype_t=via type
 CheckTheFaqs_t=Sjekk FAQ - dine spørsmål kan være besvart der
 ChooseLanguage_t=Velg språk
 Communities_t=Fellesskap
@@ -34,12 +10,7 @@ Contributor_t=Bidragsyter
 Contributors_t=Bidragsytere
 Country_t=Land
 CreateAccount_t=Generer en konto
-Creator_t=Produsent
-DateSaved_t=Dato lagret
-Date_t=Dato
-Delete_t=Slett
 Description_t=Beskrivelse
-EmailAddress_t=Emailadresse
 EmailAlreadyRegistered_t=Denne emailadressen er allerede registert
 EmailClickToConfirm_t=Klikk på denne lenken for å bekrefte registreringen
 EmailEuropeanaTeam_t=Norvegiana-teamet
@@ -167,6 +138,41 @@ ViewWithLabels_t=Se med labels
 ViewWithoutLabels_t=Se uten labels
 ViewingRelatedItems_t=Du ser relatert innhold
 YouHaveSearchFor_t=Du har søkt på
+_action.add.annotation=null
+_action.add.tag=Legg til en tag
+_action.advanced.search=Avansert søk
+_action.alt.list.view=Listevisning
+_action.alt.more.info=Klikk her for mere info
+_action.alt.next.page=Klikk her for neste resultatside
+_action.alt.previous.page=Klikk her for forrige resultatside
+_action.alt.table.view=Tabellvisning
+_boolean.and=og
+_facet.by.collection=null
+_facet.by.country=via land
+_facet.by.date=via dato
+_facet.by.language=via språk
+_facet.by.provider=via tilbyder
+_facet.by.type=via type
+_facet.by.user.tag=via brukertags
+_facet.by.year=null
+_header.actions=via hendelser
+_mine.date.saved=Dato lagret
+_mine.delete=Slett
+_option.any.field=Alle felt
+_prompt.email.address=Emailadresse
+_register.email.has.been.sent=En email er blitt sendt til denne adressen
+_search.field.creator=Produsent
+_search.field.date=Dato
+_unused.about.us=Om oss
+_unused.accessibility=Tilgjengelighet
+_unused.add=Legg til
+_unused.aggregator.explain=En portal samler materiale fra en rekke andre bidragsytere, viser det på egne nettsteder og kanaliserer det inn i Norvegiana.
+_unused.altprint=Skriv ut denne siden
+_unused.aplacetoshareideas=et sted for inspirasjon og ideer. Søk i de kulturelle samlingene i Europa, finn nye brukerveier og del dine funn
+_unused.browse.through.time=Browse via tidslinje
+abm_contentProvider_t=Institusjon
+abm_county_t=Fylke
+abm_municipality_t=Kommune
 albania_t=Albania
 armenia_t=Armenia
 austria_t=Østerrike
@@ -195,9 +201,9 @@ dc_source_t=Kilde
 dc_subject_t=Emne
 dc_title_t=Tittel
 dc_type_t=Ressurstype
-dcterms_created_t=Dato
 dcterms_alternative_t=Alternativ tittel
 dcterms_conformsTo_t=Er i samsvar med
+dcterms_created_t=Dato
 dcterms_hasFormat_t=Har format
 dcterms_hasPart_t=Har del
 dcterms_isFormatOf_t=Er format av
@@ -215,8 +221,13 @@ dutch_t=Nederlandsk
 english_t=Engelsk
 estonia_t=Estland
 estonian_t=Estisk
+europeana_country_t=Land
+europeana_dataProvider_t=Tilbyder
+europeana_provider_t=Tilbyder
+europeana_type_t=Type
 finland_t=Finland
 finnish_t=Finsk
+form.sumbit=Send
 france_t=Frankrike
 french_t=Fransk
 georgia_t=Georgia
@@ -272,11 +283,3 @@ switzerland_t=Sveits
 turkey_t=Tyrkia
 uk_t=Storbritannia
 ukraine_t=Ukraina
-europeana_country_t=Land
-europeana_dataProvider_t=Tilbyder
-europeana_provider_t=Tilbyder
-europeana_type_t=Type
-abm_contentProvider_t=Institusjon
-abm_county_t=Fylke
-abm_municipality_t=Kommune
-form.sumbit=Send
