--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -1,32 +1,6 @@
-APlaceToShareIdeas_t=een plaats voor inspiratie en ideeën. Doorzoek de culturele collecties van Europa, volg het pad van andere gebruikers en deel je ontdekkingen.
-AboutUs_t=Over ons
-Accessibility_t=Toegang
-Actions_t=Acties
-AddATag_t=Voeg een tag toe
-Add_t=Toevoegen
-AdvancedSearch_t=Uitgebreid zoeken
-AggregatorExplain_t=* Een aggregator verzamelt materiaal van een scala van andere bijdragers, toont het op zijn eigen website en maakt het toegankelijk voor Europeana.
 All_t=Alle
 AltHome_t=Klik hier om terug te keren naar de Europeana homepage
-AltListView_t=Lijstweergave
 AltLogoEuropeana_t=logo Europeana denk cultuur
-AltMoreInfo_t=Klik voor meer informatie
-AltNextPage_t=Klik hier voor volgende pagina van resultaten
-AltPreviousPage_t=Klik hier voor vorige pagina van resultaten
-AltPrint_t=Print deze pagina
-AltTableView_t=Tabelweergave
-AnEmailHasBeenSentTo_t=Een email is verzonden naar het volgende adres
-AndBoolean_t=en
-AnyField_t=Elk veld
-BrowseThroughTime_t=Browse door de tijd
-ByCollection_t=Per collectie
-ByCountry_t=Per land
-ByLanguage_t=Per taal
-ByProvider_t=Per aanbieder
-ByUserTag_t=Per gebruikers tag
-ByYear_t=Per jaar
-Bydate_t=Per datum
-Bytype_t=Per soort object
 CheckTheFaqs_t=Bekijk de lijst met veelgestelde vragen; wellicht omvat deze uw feedback.
 ChooseLanguage_t=Kies een taal
 Communities_t=Communities
@@ -36,12 +10,7 @@ Contributor_t=Bijdragende organisatie
 Contributors_t=Bijdragende organisaties
 Country_t=Land
 CreateAccount_t=Maak een account
-Creator_t=Auteur
-DateSaved_t=Datum opgeslagen
-Date_t=Datum
-Delete_t=Verwijder
 Description_t=Omschrijving
-EmailAddress_t=Email adres
 EmailAlreadyRegistered_t=Deze email adres is reeds geregistreerd
 EmailClickToConfirm_t=Klik op de volgende link om uw registratie te bevestigen
 EmailEuropeanaTeam_t=Het Europeana Team
@@ -170,6 +139,38 @@ ViewWithLabels_t=Bekijk met labels
 ViewWithoutLabels_t=Bekijk zonder labels
 ViewingRelatedItems_t=U bekijkt gerelateerde items
 YouHaveSearchFor_t=U heeft gezocht naar
+_action.add.annotation=null
+_action.add.tag=Voeg een tag toe
+_action.advanced.search=Uitgebreid zoeken
+_action.alt.list.view=Lijstweergave
+_action.alt.more.info=Klik voor meer informatie
+_action.alt.next.page=Klik hier voor volgende pagina van resultaten
+_action.alt.previous.page=Klik hier voor vorige pagina van resultaten
+_action.alt.table.view=Tabelweergave
+_boolean.and=en
+_facet.by.collection=Per collectie
+_facet.by.country=Per land
+_facet.by.date=Per datum
+_facet.by.language=Per taal
+_facet.by.provider=Per aanbieder
+_facet.by.type=Per soort object
+_facet.by.user.tag=Per gebruikers tag
+_facet.by.year=Per jaar
+_header.actions=Acties
+_mine.date.saved=Datum opgeslagen
+_mine.delete=Verwijder
+_option.any.field=Elk veld
+_prompt.email.address=Email adres
+_register.email.has.been.sent=Een email is verzonden naar het volgende adres
+_search.field.creator=Auteur
+_search.field.date=Datum
+_unused.about.us=Over ons
+_unused.accessibility=Toegang
+_unused.add=Toevoegen
+_unused.aggregator.explain=* Een aggregator verzamelt materiaal van een scala van andere bijdragers, toont het op zijn eigen website en maakt het toegankelijk voor Europeana.
+_unused.altprint=Print deze pagina
+_unused.aplacetoshareideas=een plaats voor inspiratie en ideeën. Doorzoek de culturele collecties van Europa, volg het pad van andere gebruikers en deel je ontdekkingen.
+_unused.browse.through.time=Browse door de tijd
 albania_t=Albanië
 armenia_t=Armenië
 austria_t=Oosterijk
