--- a/portal/src/main/resources/i18n/messages_pl.properties
+++ b/portal/src/main/resources/i18n/messages_pl.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=miejsce inspiracji i pomysłów. Przeszukuj kolekcje europejskiego dziedzictwa kulturowego, współpracuj z innymi użytkownikami i dziel się swoimi odkryciami.
-AboutUs_t=O nas
-Accessibility_t=Dostępność
-Actions_t=Działania
-AddATag_t=Dodaj tag
-Add_t=Dodaj
-AdvancedSearch_t=Wyszukiwanie zaawansowane
-AggregatorExplain_t=Agregator to instytucja, która gromadzi zasoby cyfrowe innych dostawców, udostępnia je w swoim portalu i przekazuje do Europeany.
 All_t=Wszystkie
 AltHome_t=Kliknij by wrócić na stronę główną
-AltListView_t=Widok listy
 AltLogoEuropeana_t=logo Europeany pomyśl o kulturze
-AltMoreInfo_t=Kliknij by uzyskać więcej informacji
-AltNextPage_t=Kliknij by przejść do następnej strony
-AltPreviousPage_t=Kliknij by przejść do poprzedniej strony
-AltPrint_t=Drukuj stronę
-AltTableView_t=Widok tabeli
-AnEmailHasBeenSentTo_t=Email został wysłany pod następujący adres
-AndBoolean_t=i
-AnyField_t=Dowolne pole
-BrowseThroughTime_t=Przeglądaj oś czasu
-ByCountry_t=Według kraju
-ByLanguage_t=Według języka
-ByProvider_t=Według instytucji
-ByUserTag_t=Według tagu użytkownika
-Bydate_t=Według daty
-Bytype_t=Według typu
 CheckTheFaqs_t=Sprawdź FAQ - możesz znaleźć tam odpowiedź na swoje pytanie
 ChooseLanguage_t=Wybierz język
 Communities_t=Społeczność
@@ -34,12 +10,7 @@ Contributor_t=Dostawca treści
 Contributors_t=Dostawcy treści
 Country_t=Kraj
 CreateAccount_t=Utwórz konto
-Creator_t=Twórca
-DateSaved_t=Data zachowana
-Date_t=Data
-Delete_t=Usuń
 Description_t=Opis
-EmailAddress_t=Adres email
 EmailAlreadyRegistered_t=Email został zarejestrowany
 EmailClickToConfirm_t=Kliknij poniższy link by potwierdzić rejestrację
 EmailEuropeanaTeam_t=Zespół Europeany
@@ -167,6 +138,38 @@ ViewWithLabels_t=Widok z etykietami
 ViewWithoutLabels_t=Widok bez etykiet
 ViewingRelatedItems_t=Oglądasz powiązane dokumenty
 YouHaveSearchFor_t=Szukasz
+_action.add.annotation=null
+_action.add.tag=Dodaj tag
+_action.advanced.search=Wyszukiwanie zaawansowane
+_action.alt.list.view=Widok listy
+_action.alt.more.info=Kliknij by uzyskać więcej informacji
+_action.alt.next.page=Kliknij by przejść do następnej strony
+_action.alt.previous.page=Kliknij by przejść do poprzedniej strony
+_action.alt.table.view=Widok tabeli
+_boolean.and=i
+_facet.by.collection=null
+_facet.by.country=Według kraju
+_facet.by.date=Według daty
+_facet.by.language=Według języka
+_facet.by.provider=Według instytucji
+_facet.by.type=Według typu
+_facet.by.user.tag=Według tagu użytkownika
+_facet.by.year=null
+_header.actions=Działania
+_mine.date.saved=Data zachowana
+_mine.delete=Usuń
+_option.any.field=Dowolne pole
+_prompt.email.address=Adres email
+_register.email.has.been.sent=Email został wysłany pod następujący adres
+_search.field.creator=Twórca
+_search.field.date=Data
+_unused.about.us=O nas
+_unused.accessibility=Dostępność
+_unused.add=Dodaj
+_unused.aggregator.explain=Agregator to instytucja, która gromadzi zasoby cyfrowe innych dostawców, udostępnia je w swoim portalu i przekazuje do Europeany.
+_unused.altprint=Drukuj stronę
+_unused.aplacetoshareideas=miejsce inspiracji i pomysłów. Przeszukuj kolekcje europejskiego dziedzictwa kulturowego, współpracuj z innymi użytkownikami i dziel się swoimi odkryciami.
+_unused.browse.through.time=Przeglądaj oś czasu
 albania_t=Albania
 armenia_t=Armenia
 austria_t=Austria
