--- a/portal/src/main/resources/i18n/messages_ro.properties
+++ b/portal/src/main/resources/i18n/messages_ro.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=un loc al inspiraţiei şi al ideilor. Căutaţi prin colecţiile culturale ale Europei, intersectaţi-vă cu alţi utilizatori şi partajaţi-vă descoperirile.
-AboutUs_t=Despre noi
-Accessibility_t=Accesibilitate
-Actions_t=Acţiuni
-AddATag_t=Adaugă un descriptor
-Add_t=Adăugaţi
-AdvancedSearch_t=Căutare avansată
-AggregatorExplain_t=*Un agregator colectează material de la alți contributori, îl expun pe propriul lor sait și îl canalizează spre Europeana.
 All_t=Tot/toată/toți/toate
 AltHome_t=Click aici pentru a reveni pe pagina natală Europeana
-AltListView_t=Prezentare-listă
 AltLogoEuropeana_t=Logo-ul Europeana: gândeşte-te la cultură
-AltMoreInfo_t=Click pentru a obţine mai multă informaţie
-AltNextPage_t=Click aici pentru următoarea pagină cu rezultate
-AltPreviousPage_t=Click aici pentru precedenta pagină cu rezultate
-AltPrint_t=Imprimă această pagină
-AltTableView_t=Prezentare tabelară
-AnEmailHasBeenSentTo_t=Un meil a fost expediat la următoarea adresă
-AndBoolean_t=şi
-AnyField_t=Oricare câmp
-BrowseThroughTime_t=Baleiază cronologic
-ByCountry_t=După ţară
-ByLanguage_t=După limbă
-ByProvider_t=După furnizor
-ByUserTag_t=După descriptori-utilizator
-Bydate_t=După dată
-Bytype_t=După tip
 CheckTheFaqs_t=Consultați FAQ (Întrebări frecvente) — poate că găsiți un răspuns la problema dvs.
 ChooseLanguage_t=Alegeţi o limbă
 Communities_t=Comunităţi
@@ -34,12 +10,7 @@ Contributor_t=Contributor
 Contributors_t=Contributori
 Country_t=Ţara
 CreateAccount_t=Creaţi un cont
-Creator_t=Creator
-DateSaved_t=Dată salvată
-Date_t=Data
-Delete_t=Şterge
 Description_t=Descriere
-EmailAddress_t=Adresa de meil
 EmailAlreadyRegistered_t=Această adresă de meil este deja înregistrată
 EmailClickToConfirm_t=Vă rug să clickaţi pe acest link pentru a vă confirma înregistrarea
 EmailEuropeanaTeam_t=Echipa Europeana
@@ -167,6 +138,38 @@ ViewWithLabels_t=Prezentare cu etichete
 ViewWithoutLabels_t=Prezentare fără etichete
 ViewingRelatedItems_t=Vedeţi toate resursele asociate
 YouHaveSearchFor_t=Aţi căutat
+_action.add.annotation=null
+_action.add.tag=Adaugă un descriptor
+_action.advanced.search=Căutare avansată
+_action.alt.list.view=Prezentare-listă
+_action.alt.more.info=Click pentru a obţine mai multă informaţie
+_action.alt.next.page=Click aici pentru următoarea pagină cu rezultate
+_action.alt.previous.page=Click aici pentru precedenta pagină cu rezultate
+_action.alt.table.view=Prezentare tabelară
+_boolean.and=şi
+_facet.by.collection=null
+_facet.by.country=După ţară
+_facet.by.date=După dată
+_facet.by.language=După limbă
+_facet.by.provider=După furnizor
+_facet.by.type=După tip
+_facet.by.user.tag=După descriptori-utilizator
+_facet.by.year=null
+_header.actions=Acţiuni
+_mine.date.saved=Dată salvată
+_mine.delete=Şterge
+_option.any.field=Oricare câmp
+_prompt.email.address=Adresa de meil
+_register.email.has.been.sent=Un meil a fost expediat la următoarea adresă
+_search.field.creator=Creator
+_search.field.date=Data
+_unused.about.us=Despre noi
+_unused.accessibility=Accesibilitate
+_unused.add=Adăugaţi
+_unused.aggregator.explain=*Un agregator colectează material de la alți contributori, îl expun pe propriul lor sait și îl canalizează spre Europeana.
+_unused.altprint=Imprimă această pagină
+_unused.aplacetoshareideas=un loc al inspiraţiei şi al ideilor. Căutaţi prin colecţiile culturale ale Europei, intersectaţi-vă cu alţi utilizatori şi partajaţi-vă descoperirile.
+_unused.browse.through.time=Baleiază cronologic
 albania_t=Albania
 armenia_t=Armenia
 austria_t=Austria
