--- a/portal/src/main/resources/i18n/messages_sk.properties
+++ b/portal/src/main/resources/i18n/messages_sk.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=miesto pre inšpiráciu a nápady. Vyhľadávajte v kultúrnych zbierkach Európy, napojte sa na iné používateľské cesty a podeľte sa o svoje objavy.
-AboutUs_t=O nás
-Accessibility_t=Prístupnosť
-Actions_t=Akcie
-AddATag_t=Pridať tag
-Add_t=Pridať
-AdvancedSearch_t=Rozšírené vyhľadávanie
-AggregatorExplain_t=*Agregátor zhromažďuje materiál od niekoľkých prispievateľov, zobrazuje ho na vlastnom webovom sídle a poskytuje ho pre Europeanu.
 All_t=Všetko
 AltHome_t=Kliknite sem, ak sa chcete vrátiť na hlavnú stránku Europeany
-AltListView_t=Zobrazenie v zozname
 AltLogoEuropeana_t=logo Európeana: kultúra myslenia
-AltMoreInfo_t=Kliknite, ak chcete viac informácií
-AltNextPage_t=kliknite sem na zobrazenie nasledujúcej stránky s výsledkami
-AltPreviousPage_t=kliknite sem na zobrazenie predchádzajúcej stránky s výsledkami
-AltPrint_t=Tlačiť túto stranu
-AltTableView_t=Zobrazenie v tabuľke
-AnEmailHasBeenSentTo_t=E-mailová spráca bola odoslaná na túto adresu
-AndBoolean_t=a
-AnyField_t=Akékoľvek pole
-BrowseThroughTime_t=Prezeranie v čase
-ByCountry_t=Podľa krajiny
-ByLanguage_t=Podľa jazyka
-ByProvider_t=Podľa poskytovateľa
-ByUserTag_t=Podľa tagu používateľa
-Bydate_t=Podľa dátumu
-Bytype_t=podľa typu
 CheckTheFaqs_t=Pozrite si sekciu Často kladené otázky - môžete v nich nájsť odpoveď na Vašu spätnú väzbu
 ChooseLanguage_t=Vyberte si jazyk
 Communities_t=Komunity
@@ -34,12 +10,7 @@ Contributor_t=Prispievateľ
 Contributors_t=Prispievatelia
 Country_t=Krajina
 CreateAccount_t=Vytvorenie konta
-Creator_t=Tvorca
-DateSaved_t=Dátum uloženia
-Date_t=Dátum
-Delete_t=Vymazať
 Description_t=Opis
-EmailAddress_t=E-mailová adresa:
 EmailAlreadyRegistered_t=Táto adresa elektronickej pošty je už registrovaná
 EmailClickToConfirm_t=Kliknite prosím na nasledovné prepojenie, ak chcete potvrdiť Vašu registráciu
 EmailEuropeanaTeam_t=Tím Europeana
@@ -167,6 +138,38 @@ ViewWithLabels_t=Zobraziť s návestiami
 ViewWithoutLabels_t=Zobraziť bez návestí
 ViewingRelatedItems_t=Prezeráte si súvisiace položky
 YouHaveSearchFor_t=Hľadali ste
+_action.add.annotation=null
+_action.add.tag=Pridať tag
+_action.advanced.search=Rozšírené vyhľadávanie
+_action.alt.list.view=Zobrazenie v zozname
+_action.alt.more.info=Kliknite, ak chcete viac informácií
+_action.alt.next.page=kliknite sem na zobrazenie nasledujúcej stránky s výsledkami
+_action.alt.previous.page=kliknite sem na zobrazenie predchádzajúcej stránky s výsledkami
+_action.alt.table.view=Zobrazenie v tabuľke
+_boolean.and=a
+_facet.by.collection=null
+_facet.by.country=Podľa krajiny
+_facet.by.date=Podľa dátumu
+_facet.by.language=Podľa jazyka
+_facet.by.provider=Podľa poskytovateľa
+_facet.by.type=podľa typu
+_facet.by.user.tag=Podľa tagu používateľa
+_facet.by.year=null
+_header.actions=Akcie
+_mine.date.saved=Dátum uloženia
+_mine.delete=Vymazať
+_option.any.field=Akékoľvek pole
+_prompt.email.address=E-mailová adresa:
+_register.email.has.been.sent=E-mailová spráca bola odoslaná na túto adresu
+_search.field.creator=Tvorca
+_search.field.date=Dátum
+_unused.about.us=O nás
+_unused.accessibility=Prístupnosť
+_unused.add=Pridať
+_unused.aggregator.explain=*Agregátor zhromažďuje materiál od niekoľkých prispievateľov, zobrazuje ho na vlastnom webovom sídle a poskytuje ho pre Europeanu.
+_unused.altprint=Tlačiť túto stranu
+_unused.aplacetoshareideas=miesto pre inšpiráciu a nápady. Vyhľadávajte v kultúrnych zbierkach Európy, napojte sa na iné používateľské cesty a podeľte sa o svoje objavy.
+_unused.browse.through.time=Prezeranie v čase
 albania_t=Albánsko
 armenia_t=Arménsko
 austria_t=Rakúsko
