--- a/portal/src/main/resources/i18n/messages_sl.properties
+++ b/portal/src/main/resources/i18n/messages_sl.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=vir navdiha in novih idej. Iščite po kulturnih zbirkah Evrope, povežite se z drugimi uporabniki in delite svoja odkritja.
-AboutUs_t=O nas
-Accessibility_t=Dostopnost
-Actions_t=Možnosti
-AddATag_t=Dodaj zaznamek
-Add_t=Dodaj
-AdvancedSearch_t=Napredno iskanje
-AggregatorExplain_t=*Zbirni center združuje gradivo, ki so ga prispevali partnerji, ga prikaže na njihovi domači strani, hkrati pa ga posreduje tudi na Europeano.
 All_t=Vse
 AltHome_t=Za povratek na domačo stran Europeane kliknite tukaj
-AltListView_t=Poglej kot seznam
 AltLogoEuropeana_t=logotip Europeana mislimo na kulturo
-AltMoreInfo_t=Za več informacij kliknite tukaj
-AltNextPage_t=Za prikaz naslednje strani z rezultati kliknite tukaj
-AltPreviousPage_t=za prikaz prejšnje strani z rezultati kliknite tukaj
-AltPrint_t=Natisnite stran
-AltTableView_t=Poglej kot tabelo
-AnEmailHasBeenSentTo_t=Na navedeni naslov smo poslali sporočilo
-AndBoolean_t=in
-AnyField_t=Vsa polja
-BrowseThroughTime_t=Brskajte po času
-ByCountry_t=Po državi
-ByLanguage_t=Po jeziku
-ByProvider_t=Po ponudniku
-ByUserTag_t=Po zaznamkih uporabnikov
-Bydate_t=Po datumu
-Bytype_t=Po tipu
 CheckTheFaqs_t=Preverite Pogosto zastavljena vprašanja - morda najdete odgovor na vaše vprašanje
 ChooseLanguage_t=Izberite jezik
 Communities_t=Skupnosti
@@ -34,12 +10,7 @@ Contributor_t=Prispeval
 Contributors_t=Prispevali
 Country_t=Država
 CreateAccount_t=Ustvari račun
-Creator_t=Avtor
-DateSaved_t=Datum
-Date_t=Datum
-Delete_t=Izbriši
 Description_t=Opis
-EmailAddress_t=Elektronski naslov
 EmailAlreadyRegistered_t=Uporabnik s tem elektronskim naslovom se je že registriral
 EmailClickToConfirm_t=Za potrditev registracije prosimo sledite spodnji povezavi
 EmailEuropeanaTeam_t=Ekipa Europeane
@@ -167,6 +138,38 @@ ViewWithLabels_t=Pogled z oznakami
 ViewWithoutLabels_t=Pogled brez oznak
 ViewingRelatedItems_t=Pregledujete sorodne predmete
 YouHaveSearchFor_t=Iskali ste
+_action.add.annotation=null
+_action.add.tag=Dodaj zaznamek
+_action.advanced.search=Napredno iskanje
+_action.alt.list.view=Poglej kot seznam
+_action.alt.more.info=Za več informacij kliknite tukaj
+_action.alt.next.page=Za prikaz naslednje strani z rezultati kliknite tukaj
+_action.alt.previous.page=za prikaz prejšnje strani z rezultati kliknite tukaj
+_action.alt.table.view=Poglej kot tabelo
+_boolean.and=in
+_facet.by.collection=null
+_facet.by.country=Po državi
+_facet.by.date=Po datumu
+_facet.by.language=Po jeziku
+_facet.by.provider=Po ponudniku
+_facet.by.type=Po tipu
+_facet.by.user.tag=Po zaznamkih uporabnikov
+_facet.by.year=null
+_header.actions=Možnosti
+_mine.date.saved=Datum
+_mine.delete=Izbriši
+_option.any.field=Vsa polja
+_prompt.email.address=Elektronski naslov
+_register.email.has.been.sent=Na navedeni naslov smo poslali sporočilo
+_search.field.creator=Avtor
+_search.field.date=Datum
+_unused.about.us=O nas
+_unused.accessibility=Dostopnost
+_unused.add=Dodaj
+_unused.aggregator.explain=*Zbirni center združuje gradivo, ki so ga prispevali partnerji, ga prikaže na njihovi domači strani, hkrati pa ga posreduje tudi na Europeano.
+_unused.altprint=Natisnite stran
+_unused.aplacetoshareideas=vir navdiha in novih idej. Iščite po kulturnih zbirkah Evrope, povežite se z drugimi uporabniki in delite svoja odkritja.
+_unused.browse.through.time=Brskajte po času
 albania_t=Albanija
 armenia_t=Armenija
 austria_t=Avstrija
