--- a/portal/src/main/resources/i18n/messages_sv.properties
+++ b/portal/src/main/resources/i18n/messages_sv.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=en plats för inspiration och idéer. Sök bland Europas kulturella samlingar, upptäck andras favoriter och dela med dig av dina upptäckter.
-AboutUs_t=Om oss
-Accessibility_t=Hjälpmedel
-Actions_t=Åtgärder
-AddATag_t=Lägg till en märkning
-Add_t=Lägg till
-AdvancedSearch_t=Avancerad sökning
-AggregatorExplain_t=*En aggregator samlar in material från en mängd olika bidragsgivare, visar det på sin egen webbplats och kanaliserar det dessutom till Europeana.
 All_t=Alla
 AltHome_t=Klicka här om du vill komma tillbaka till Europeanas hemsida
-AltListView_t=Listvisning
 AltLogoEuropeana_t=Logotyp för Europeanas portal till kulturella samlingar
-AltMoreInfo_t=Klicka här för mer information
-AltNextPage_t=Klicka här för nästa sida bland resultaten
-AltPreviousPage_t=Klicka här för föregående sida bland resultaten
-AltPrint_t=Skriv ut den här sidan
-AltTableView_t=Tabellvisning
-AnEmailHasBeenSentTo_t=E-post har skickats till följande adress
-AndBoolean_t=och
-AnyField_t=Alla fält
-BrowseThroughTime_t=Bläddra bland alla tider
-ByCountry_t=Efter land
-ByLanguage_t=Efter språk
-ByProvider_t=Efter leverantör
-ByUserTag_t=Efter användarmärkning
-Bydate_t=Efter datum
-Bytype_t=Efter typ
 CheckTheFaqs_t=Kontrollera frågor och svar – de kanske kan besvara din feedback
 ChooseLanguage_t=Välj språk
 Communities_t=Webbgrupper
@@ -34,12 +10,7 @@ Contributor_t=Medverkande
 Contributors_t=Medverkande
 Country_t=Land
 CreateAccount_t=Skapa ett konto
-Creator_t=Upphovsperson
-DateSaved_t=Informationen har sparats
-Date_t=Datum
-Delete_t=Ta bort
 Description_t=Beskrivning
-EmailAddress_t=E-postadress
 EmailAlreadyRegistered_t=Den här e-postadressen har redan registrerats
 EmailClickToConfirm_t=Bekräfta din registering genom att klicka på länken nedan
 EmailEuropeanaTeam_t=Europeanagruppen
@@ -167,6 +138,38 @@ ViewWithLabels_t=Visa med etiketter
 ViewWithoutLabels_t=Visa utan etiketter
 ViewingRelatedItems_t=Du visar liknande objekt
 YouHaveSearchFor_t=Du sökte efter
+_action.add.annotation=null
+_action.add.tag=Lägg till en märkning
+_action.advanced.search=Avancerad sökning
+_action.alt.list.view=Listvisning
+_action.alt.more.info=Klicka här för mer information
+_action.alt.next.page=Klicka här för nästa sida bland resultaten
+_action.alt.previous.page=Klicka här för föregående sida bland resultaten
+_action.alt.table.view=Tabellvisning
+_boolean.and=och
+_facet.by.collection=null
+_facet.by.country=Efter land
+_facet.by.date=Efter datum
+_facet.by.language=Efter språk
+_facet.by.provider=Efter leverantör
+_facet.by.type=Efter typ
+_facet.by.user.tag=Efter användarmärkning
+_facet.by.year=null
+_header.actions=Åtgärder
+_mine.date.saved=Informationen har sparats
+_mine.delete=Ta bort
+_option.any.field=Alla fält
+_prompt.email.address=E-postadress
+_register.email.has.been.sent=E-post har skickats till följande adress
+_search.field.creator=Upphovsperson
+_search.field.date=Datum
+_unused.about.us=Om oss
+_unused.accessibility=Hjälpmedel
+_unused.add=Lägg till
+_unused.aggregator.explain=*En aggregator samlar in material från en mängd olika bidragsgivare, visar det på sin egen webbplats och kanaliserar det dessutom till Europeana.
+_unused.altprint=Skriv ut den här sidan
+_unused.aplacetoshareideas=en plats för inspiration och idéer. Sök bland Europas kulturella samlingar, upptäck andras favoriter och dela med dig av dina upptäckter.
+_unused.browse.through.time=Bläddra bland alla tider
 albania_t=Albanien
 armenia_t=Armenien
 austria_t=Österrike
