--- a/portal/src/main/resources/i18n/messages_tr.properties
+++ b/portal/src/main/resources/i18n/messages_tr.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=a place for inspiration and ideas. Search through the cultural collections of Europe, connect to other user pathways and share your discoveries.
-AboutUs_t=About us
-Accessibility_t=Accessibility
-Actions_t=Actions
-AddATag_t=Add a tag
-Add_t=Add
-AdvancedSearch_t=Advanced search
-AggregatorExplain_t=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 All_t=All
 AltHome_t=Click here to return to the Europeana homepage
-AltListView_t=List view
 AltLogoEuropeana_t=logo Europeana think culture
-AltMoreInfo_t=Click for more information
-AltNextPage_t=Click here for next page of results
-AltPreviousPage_t=click here for previous page of results
-AltPrint_t=Print this page
-AltTableView_t=Table view
-AnEmailHasBeenSentTo_t=An email has been sent to the following address
-AndBoolean_t=ve
-AnyField_t=Herhangibir alan
-BrowseThroughTime_t=Browse through time
-ByCountry_t=By country
-ByLanguage_t=By language
-ByProvider_t=By provider
-ByUserTag_t=By user tag
-Bydate_t=By date
-Bytype_t=By type
 CheckTheFaqs_t=Check the FAQs - they may cover your feedback
 ChooseLanguage_t=Choose a language
 Communities_t=Communities
@@ -34,12 +10,7 @@ Contributor_t=Contributor
 Contributors_t=Contributors
 Country_t=Ülke
 CreateAccount_t=Create an account
-Creator_t=Creator
-DateSaved_t=Date saved
-Date_t=Date
-Delete_t=Delete
 Description_t=Description
-EmailAddress_t=Email address
 EmailAlreadyRegistered_t=This email is already registered
 EmailClickToConfirm_t=Please click on the following link to confirm your registration
 EmailEuropeanaTeam_t=The Europeana Team
@@ -167,6 +138,38 @@ ViewWithLabels_t=View with labels
 ViewWithoutLabels_t=View without labels
 ViewingRelatedItems_t=You are viewing related items
 YouHaveSearchFor_t=You have searched for
+_action.add.annotation=null
+_action.add.tag=Add a tag
+_action.advanced.search=Advanced search
+_action.alt.list.view=List view
+_action.alt.more.info=Click for more information
+_action.alt.next.page=Click here for next page of results
+_action.alt.previous.page=click here for previous page of results
+_action.alt.table.view=Table view
+_boolean.and=ve
+_facet.by.collection=null
+_facet.by.country=By country
+_facet.by.date=By date
+_facet.by.language=By language
+_facet.by.provider=By provider
+_facet.by.type=By type
+_facet.by.user.tag=By user tag
+_facet.by.year=null
+_header.actions=Actions
+_mine.date.saved=Date saved
+_mine.delete=Delete
+_option.any.field=Herhangibir alan
+_prompt.email.address=Email address
+_register.email.has.been.sent=An email has been sent to the following address
+_search.field.creator=Creator
+_search.field.date=Date
+_unused.about.us=About us
+_unused.accessibility=Accessibility
+_unused.add=Add
+_unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
+_unused.altprint=Print this page
+_unused.aplacetoshareideas=a place for inspiration and ideas. Search through the cultural collections of Europe, connect to other user pathways and share your discoveries.
+_unused.browse.through.time=Browse through time
 albania_t=Arnavutluk
 armenia_t=Ermenistan
 austria_t=Avusturya
