--- a/portal/src/main/resources/i18n/messages_xx.properties
+++ b/portal/src/main/resources/i18n/messages_xx.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=XXXXXX
-AboutUs_t=XXXXXX
-Accessibility_t=XXXXXX
-Actions_t=XXXXXX
-AddATag_t=XXXXXX
-Add_t=XXXXXX
-AdvancedSearch_t=XXXXXX
-AggregatorExplain_t=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 All_t=XXXXXX
 AltHome_t=XXXXXX
-AltListView_t=XXXXXX
 AltLogoEuropeana_t=XXXXXX
-AltMoreInfo_t=XXXXXX
-AltNextPage_t=XXXXXX
-AltPreviousPage_t=XXXXXX
-AltPrint_t=XXXXXX
-AltTableView_t=XXXXXX
-AnEmailHasBeenSentTo_t=XXXXXX
-AndBoolean_t=XXXXXX
-AnyField_t=XXXXXX
-BrowseThroughTime_t=XXXXXX
-ByCountry_t=XXXXXX
-ByLanguage_t=XXXXXX
-ByProvider_t=XXXXXX
-ByUserTag_t=XXXXXX
-Bydate_t=XXXXXX
-Bytype_t=XXXXXX
 CheckTheFaqs_t=XXXXXX
 ChooseLanguage_t=XXXXXX
 Communities_t=XXXXXX
@@ -34,12 +10,7 @@ Contributor_t=XXXXXX
 Contributors_t=XXXXXX
 Country_t=XXXXXX
 CreateAccount_t=XXXXXX
-Creator_t=XXXXXX
-DateSaved_t=XXXXXX
-Date_t=XXXXXX
-Delete_t=XXXXXX
 Description_t=XXXXXX
-EmailAddress_t=XXXXXX
 EmailAlreadyRegistered_t=XXXXXX
 EmailClickToConfirm_t=XXXXXX
 EmailEuropeanaTeam_t=XXXXXX
@@ -167,6 +138,38 @@ ViewWithLabels_t=XXXXXX
 ViewWithoutLabels_t=XXXXXX
 ViewingRelatedItems_t=XXXXXX
 YouHaveSearchFor_t=XXXXXX
+_action.add.annotation=null
+_action.add.tag=XXXXXX
+_action.advanced.search=XXXXXX
+_action.alt.list.view=XXXXXX
+_action.alt.more.info=XXXXXX
+_action.alt.next.page=XXXXXX
+_action.alt.previous.page=XXXXXX
+_action.alt.table.view=XXXXXX
+_boolean.and=XXXXXX
+_facet.by.collection=null
+_facet.by.country=XXXXXX
+_facet.by.date=XXXXXX
+_facet.by.language=XXXXXX
+_facet.by.provider=XXXXXX
+_facet.by.type=XXXXXX
+_facet.by.user.tag=XXXXXX
+_facet.by.year=null
+_header.actions=XXXXXX
+_mine.date.saved=XXXXXX
+_mine.delete=XXXXXX
+_option.any.field=XXXXXX
+_prompt.email.address=XXXXXX
+_register.email.has.been.sent=XXXXXX
+_search.field.creator=XXXXXX
+_search.field.date=XXXXXX
+_unused.about.us=XXXXXX
+_unused.accessibility=XXXXXX
+_unused.add=XXXXXX
+_unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
+_unused.altprint=XXXXXX
+_unused.aplacetoshareideas=XXXXXX
+_unused.browse.through.time=XXXXXX
 albania_t=XXXXXX
 armenia_t=XXXXXX
 austria_t=XXXXXX
