--- a/portal/src/main/resources/i18n/messages_pt.properties
+++ b/portal/src/main/resources/i18n/messages_pt.properties
@@ -1,30 +1,6 @@
-APlaceToShareIdeas_t=um lugar de inspiração e ideias. Pesquise através das colecções culturais da Europa, ligue-se aos percursos de outros utilizadores e partilhe as suas descobertas.
-AboutUs_t=Sobre nós
-Accessibility_t=Acessibilidade
-Actions_t=Acções
-AddATag_t=Adicionar uma etiqueta
-Add_t=Adicionar
-AdvancedSearch_t=Pesquisa avançada
-AggregatorExplain_t=*Um agregador junta material de uma série de outros participantes, apresenta-o no seu próprio sítio e canaliza-o para a Europeana.
 All_t=Todos
 AltHome_t=Clique aqui para voltar à página inicial de Europeana
-AltListView_t=Apresentação de lista
 AltLogoEuropeana_t=logo Europeana pensar cultura
-AltMoreInfo_t=Clique para mais informação
-AltNextPage_t=Cloque aqui para a página de resultados seguinte
-AltPreviousPage_t=clique aqui para a página de resultados anterior
-AltPrint_t=Imprimir esta página
-AltTableView_t=Apresentação de tabela
-AnEmailHasBeenSentTo_t=Foi-lhe enviado um email para o seguinte endereço
-AndBoolean_t=e
-AnyField_t=Qualquer campo
-BrowseThroughTime_t=Percorra atrvés do tempo
-ByCountry_t=Por país
-ByLanguage_t=Por língua
-ByProvider_t=Por fornecedor
-ByUserTag_t=Por etiqueta de utilizador
-Bydate_t=Por data
-Bytype_t=Por tipo
 CheckTheFaqs_t=Verifique as Perguntas Frequentes - eles podem conter a resposta às suas questões
 ChooseLanguage_t=Escolha uma língua
 Communities_t=Comunidades
@@ -34,12 +10,7 @@ Contributor_t=Participante
 Contributors_t=Participantes
 Country_t=País
 CreateAccount_t=Criar uma conta
-Creator_t=Criador
-DateSaved_t=Guardado em (data)
-Date_t=Data
-Delete_t=Apagar
 Description_t=Descrição
-EmailAddress_t=Endereço de email
 EmailAlreadyRegistered_t=Este email já foi registado
 EmailClickToConfirm_t=Por favor, clique nesta ligação para confirmar o seu registo
 EmailEuropeanaTeam_t=A Equipa de Europeana
@@ -167,6 +138,38 @@ ViewWithLabels_t=Ver com etiquetas
 ViewWithoutLabels_t=Ver sem etiquetas
 ViewingRelatedItems_t=Está a visualizar items relacionados
 YouHaveSearchFor_t=Pesquisou por
+_action.add.annotation=null
+_action.add.tag=Adicionar uma etiqueta
+_action.advanced.search=Pesquisa avançada
+_action.alt.list.view=Apresentação de lista
+_action.alt.more.info=Clique para mais informação
+_action.alt.next.page=Cloque aqui para a página de resultados seguinte
+_action.alt.previous.page=clique aqui para a página de resultados anterior
+_action.alt.table.view=Apresentação de tabela
+_boolean.and=e
+_facet.by.collection=null
+_facet.by.country=Por país
+_facet.by.date=Por data
+_facet.by.language=Por língua
+_facet.by.provider=Por fornecedor
+_facet.by.type=Por tipo
+_facet.by.user.tag=Por etiqueta de utilizador
+_facet.by.year=null
+_header.actions=Acções
+_mine.date.saved=Guardado em (data)
+_mine.delete=Apagar
+_option.any.field=Qualquer campo
+_prompt.email.address=Endereço de email
+_register.email.has.been.sent=Foi-lhe enviado um email para o seguinte endereço
+_search.field.creator=Criador
+_search.field.date=Data
+_unused.about.us=Sobre nós
+_unused.accessibility=Acessibilidade
+_unused.add=Adicionar
+_unused.aggregator.explain=*Um agregador junta material de uma série de outros participantes, apresenta-o no seu próprio sítio e canaliza-o para a Europeana.
+_unused.altprint=Imprimir esta página
+_unused.aplacetoshareideas=um lugar de inspiração e ideias. Pesquise através das colecções culturais da Europa, ligue-se aos percursos de outros utilizadores e partilhe as suas descobertas.
+_unused.browse.through.time=Percorra atrvés do tempo
 albania_t=Albânia
 armenia_t=Arménia
 austria_t=Austria
